Add Initial Japanese translated files

--- a/src/acknowledgments.tex
+++ b/src/acknowledgments.tex
@@ -1,16 +1,10 @@
 \noindent
-I’d like to thank Edward Kmett and Gershom Bazerman for checking my math
-and logic. I'm grateful to many volunteers who corrected my mistakes and improved the book.
+数学と論理のチェックをしてくれたEdward Kmett氏とGershom Bazerman氏に感謝します。また、多くのボランティアが私の間違いを訂正し、本を改善する手助けをしてくれたことにも感謝しています。
 
 \vspace{1.0em}
 \noindent
-I’d like to thank Andrew Sutton for rewriting my C++ monoid concept
-code according to his and Bjarne Stroustrup’s latest proposal.
+私のC++のモノイドコンセプトコードを、彼とBjarne Stroustrup氏の最新の提案に基づいて書き直してくれたAndrew Sutton氏に感謝します。
 
 \vspace{1.0em}
 \noindent
-I'm grateful to Eric Niebler for reading the draft and providing the
-clever implementation of \code{compose} that uses advanced features of
-C++14 to drive type inference. I was able to cut the whole section of
-old fashioned template magic that did the same thing using type traits.
-Good riddance!
+ドラフトを読んでくれて、C++14の高度な機能を使って型推論を進める\code{compose}の賢い実装を提供してくれたEric Niebler氏に感謝します。これによって、型特性を使って同じことをしていた古風なテンプレートマジックの全セクションを削除できました。さようなら、古い魔法たち！
