--- a/src/colophon.tex
+++ b/src/colophon.tex
@@ -1,14 +1,8 @@
-\lettrine[lraise=-0.03,loversize=0.08]{T}{his book} was compiled by \urlref{https://hmemcpy.com}{Igal Tabachnik}, by converting the original text by Bartosz Milewski into \LaTeX{} format, by
-first scraping the original WordPress blog posts using \urlref{https://mercury.postlight.com/web-parser/}{Mercury Web Parser}
-to get a clean HTML content, modifying and tweaking with \urlref{https://www.crummy.com/software/BeautifulSoup/}{Beautiful Soup},
-finally, converting to \LaTeX{} with \urlref{https://pandoc.org/}{Pandoc}.
+\lettrine[lraise=-0.03,loversize=0.08]{こ}{の本}は、Bartosz Milewskiのオリジナルテキストを\LaTeX{}形式に変換することによって、\urlref{https://hmemcpy.com}{Igal Tabachnik}氏によって編纂されました。まずは\urlref{https://mercury.postlight.com/web-parser/}{Mercury Web Parser}を使ってオリジナルのWordPressブログ投稿をスクレイピングし、クリーンなHTMLコンテンツを取得、\urlref{https://www.crummy.com/software/BeautifulSoup/}{Beautiful Soup}を使用して修正・調整し、最終的に\urlref{https://pandoc.org/}{Pandoc}で\LaTeX{}に変換しました。
 
-The typefaces are Linux Libertine for body text and Linux Biolinum for headings, both by Philipp H. Poll. Typewriter face is Inconsolata
-created by Raph Levien and supplemented by Dimosthenis Kaponis and Takashi Tanigawa in the form of Inconsolata \acronym{LGC}. The cover page
-typeface is Alegreya, designed by Juan Pablo del Peral.
+本文の書体は、Philipp H. Poll氏によるLinux Libertineで、見出しにはLinux Biolinumを使用しています。タイプライター書体は、Raph Levien氏によって作成され、Dimosthenis Kaponis氏とTakashi Tanigawa氏によってInconsolata \acronym{LGC}の形で補完されています。表紙の書体は、Juan Pablo del Peral氏によってデザインされたAlegreyaです。
 
-Original book layout design and typography are done by Andres Raba. Syntax highlighting is using ``GitHub'' style for Pygments by
-\urlref{https://github.com/hugomaiavieira/pygments-style-github}{Hugo Maia Vieira}.
+オリジナルの本のレイアウトデザインとタイポグラフィはAndres Raba氏によって行われました。シンタックスハイライトは、\urlref{https://github.com/hugomaiavieira/pygments-style-github}{Hugo Maia Vieira}氏による「GitHub」スタイルのPygmentsを使用しています。
 \ifdefined\OPTCustomLanguage{%
     \input{content/\OPTCustomLanguage/colophon}
   }
