--- a/src/content/editor-note.tex
+++ b/src/content/editor-note.tex
@@ -1,8 +1,8 @@
 % !TEX root = ../ctfp-print.tex
 
 \ifdefined\OPTCustomLanguage{%
-    \chapter*{A note from the editor}
-    \addcontentsline{toc}{chapter}{A note from the editor}
+    \chapter*{編集者による注記}
+    \addcontentsline{toc}{chapter}{編集者による注記}
     \input{content/\OPTCustomLanguage/editor-note}
   }
 \fi
