--- a/src/content/ocaml/colophon.tex
+++ b/src/content/ocaml/colophon.tex
@@ -1,2 +1,1 @@
-OCaml code translation was done by \urlref{https://github.com/ArulselvanMadhavan/ocaml-ctfp}{Arulselvan Madhavan}
-and reviewed by \urlref{http://www.mseri.me}{Marcello Seri} and \urlref{https://github.com/XVilka}{Anton Kochkov}.
+OCamlコードは\urlref{https://github.com/ArulselvanMadhavan/ocaml-ctfp}{Arulselvan Madhavan}により翻訳され、\urlref{http://www.mseri.me}{Marcello Seri}と\urlref{https://github.com/XVilka}{Anton Kochkov}により査読されました。
