--- a/src/content/reason/colophon.tex
+++ b/src/content/reason/colophon.tex
@@ -1,1 +1,1 @@
-ReasonML code translation was done by \urlref{https://github.com/fhammerschmidt/}{Florian Hammerschmidt}.
+ReasonMLコードへの翻訳は\urlref{https://github.com/fhammerschmidt/}{Florian Hammerschmidt}によって行われました。
