--- a/src/content/scala/colophon.tex
+++ b/src/content/scala/colophon.tex
@@ -1,1 +1,1 @@
-Scala code translation was done by \urlref{https://github.com/typelevel/CT_from_Programmers.scala}{Typelevel} contributors.
+Scalaコードの翻訳は\urlref{https://github.com/typelevel/CT_from_Programmers.scala}{Typelevel}の貢献者によって行われました。
