--- a/src/ctfp.tex
+++ b/src/ctfp.tex
@@ -6,132 +6,132 @@
 \tableofcontents
 
 \input{content/editor-note}
-\chapter*{Preface}
-\addcontentsline{toc}{chapter}{Preface}
+\chapter*{序文}
+\addcontentsline{toc}{chapter}{序文}
 \label{Preface}
 \subfile{content/0.0/Preface}
 
 \mainmatter
 
-\part*{Part One}
-\addcontentsline{toc}{part}{Part One}
+\part*{第1部}
+\addcontentsline{toc}{part}{第1部}
 
-\chapter{Category: The Essence of Composition}\label{category-the-essence-of-composition}
+\chapter{圏: 合成の本質}\label{category-the-essence-of-composition}
 \subfile{content/1.1/category-the-essence-of-composition}
 
-\chapter{Types and Functions}\label{types-and-functions}
+\chapter{型と関数}\label{types-and-functions}
 \subfile{content/1.2/types-and-functions}
 
-\chapter{Categories Great and Small}\label{categories-great-and-small}
+\chapter{圏の大小}\label{categories-great-and-small}
 \subfile{content/1.3/categories-great-and-small}
 
-\chapter{Kleisli Categories}\label{kleisli-categories}
+\chapter{Kleisli圏}\label{kleisli-categories}
 \subfile{content/1.4/kleisli-categories}
 
-\chapter{Products and Coproducts}\label{products-and-coproducts}
+\chapter{積と余積}\label{products-and-coproducts}
 \subfile{content/1.5/products-and-coproducts}
 
-\chapter{Simple Algebraic Data Types}\label{simple-algebraic-data-types}
+\chapter{単純代数的データ型}\label{simple-algebraic-data-types}
 \subfile{content/1.6/simple-algebraic-data-types}
 
-\chapter{Functors}\label{functors}
+\chapter{関手}\label{functors}
 \subfile{content/1.7/functors}
 
-\chapter{Functoriality}\label{functoriality}
+\chapter{関手性}\label{functoriality}
 \subfile{content/1.8/functoriality}
 
-\chapter{Function Types}\label{function-types}
+\chapter{関数型}\label{function-types}
 \subfile{content/1.9/function-types}
 
-\chapter{Natural Transformations}\label{natural-transformations}
+\chapter{自然変換}\label{natural-transformations}
 \subfile{content/1.10/natural-transformations}
 
-\part*{Part Two}
-\addcontentsline{toc}{part}{Part Two}
+\part*{第2部}
+\addcontentsline{toc}{part}{第2部}
 
-\chapter{Declarative Programming}\label{declarative-programming}
+\chapter{宣言的プログラミング}\label{declarative-programming}
 \subfile{content/2.1/declarative-programming}
 
-\chapter{Limits and Colimits}\label{limits-and-colimits}
+\chapter{極限と余極限}\label{limits-and-colimits}
 \subfile{content/2.2/limits-and-colimits}
 
-\chapter{Free Monoids}\label{free-monoids}
+\chapter{自由モノイド}\label{free-monoids}
 \subfile{content/2.3/free-monoids}
 
-\chapter{Representable Functors}\label{representable-functors}
+\chapter{表現可能関手}\label{representable-functors}
 \subfile{content/2.4/representable-functors}
 
-\chapter{The Yoneda Lemma}\label{the-yoneda-lemma}
+\chapter{米田の補題}\label{the-yoneda-lemma}
 \subfile{content/2.5/the-yoneda-lemma}
 
-\chapter{Yoneda Embedding}\label{yoneda-embedding}
+\chapter{米田埋め込み}\label{yoneda-embedding}
 \subfile{content/2.6/yoneda-embedding}
 
-\part*{Part Three}
-\addcontentsline{toc}{part}{Part Three}
+\part*{第3部}
+\addcontentsline{toc}{part}{第3部}
 
-\chapter{It's All About Morphisms}\label{all-about-morphisms}
+\chapter{すべては射に関することです}\label{all-about-morphisms}
 \subfile{content/3.1/its-all-about-morphisms}
 
-\chapter{Adjunctions}\label{adjunctions}
+\chapter{随伴}\label{adjunctions}
 \subfile{content/3.2/adjunctions}
 
-\chapter{Free/Forgetful Adjunctions}\label{free-forgetful-adjunctions}
+\chapter{自由/忘却随伴}\label{free-forgetful-adjunctions}
 \subfile{content/3.3/free-forgetful-adjunctions}
 
-\chapter{Monads: Programmer's Definition}\label{monads-programmers-definition}
+\chapter{モナド: プログラマによる定義}\label{monads-programmers-definition}
 \subfile{content/3.4/monads-programmers-definition}
 
-\chapter{Monads and Effects}\label{monads-and-effects}
+\chapter{モナドと効果}\label{monads-and-effects}
 \subfile{content/3.5/monads-and-effects}
 
-\chapter{Monads Categorically}\label{monads-categorically}
+\chapter{モナドを圏論的に}\label{monads-categorically}
 \subfile{content/3.6/monads-categorically}
 
-\chapter{Comonads}\label{comonads}
+\chapter{余モナド}\label{comonads}
 \subfile{content/3.7/comonads}
 
-\chapter{F-Algebras}\label{f-algebras}
+\chapter{F-代数}\label{f-algebras}
 \subfile{content/3.8/f-algebras}
 
-\chapter{Algebras for Monads}\label{algebras-for-monads}
+\chapter{モナドに関する代数}\label{algebras-for-monads}
 \subfile{content/3.9/algebras-for-monads}
 
-\chapter{Ends and Coends}\label{ends-and-coends}
+\chapter{エンドと余エンド}\label{ends-and-coends}
 \subfile{content/3.10/ends-and-coends}
 
-\chapter{Kan Extensions}\label{kan-extensions}
+\chapter{Kan拡張}\label{kan-extensions}
 \subfile{content/3.11/kan-extensions}
 
-\chapter{Enriched Categories}\label{enriched-categories}
+\chapter{豊穣圏}\label{enriched-categories}
 \subfile{content/3.12/enriched-categories}
 
-\chapter{Topoi}\label{topoi}
+\chapter{トポス}\label{topoi}
 \subfile{content/3.13/topoi}
 
-\chapter{Lawvere Theories}\label{lawvere-theories}
+\chapter{Lawvere理論}\label{lawvere-theories}
 \subfile{content/3.14/lawvere-theories}
 
-\chapter{Monads, Monoids, and Categories}\label{monads-monoids-categories}
+\chapter{モナド、モノイド、そして圏}\label{monads-monoids-categories}
 \subfile{content/3.15/monads-monoids-and-categories}
 
 \backmatter
 
 \appendix
-\addcontentsline{toc}{part}{Appendices}
+\addcontentsline{toc}{part}{付録}
 \input{index}
 
 \makeatletter\@openrightfalse
-\chapter*{Acknowledgments}\label{acknowledgments}
-\addcontentsline{toc}{chapter}{Acknowledgments}
+\chapter*{謝辞}\label{acknowledgments}
+\addcontentsline{toc}{chapter}{謝辞}
 \input{acknowledgments}
 
-\chapter*{Colophon}\label{colophon}
-\addcontentsline{toc}{chapter}{Colophon}
+\chapter*{奥付}\label{colophon}
+\addcontentsline{toc}{chapter}{奥付}
 \input{colophon}
 
-\chapter*{Copyleft notice}\label{copyleft}
-\addcontentsline{toc}{chapter}{Copyleft notice}
+\chapter*{コピーレフトに関する通知}\label{copyleft}
+\addcontentsline{toc}{chapter}{コピーレフトに関する通知}
 \input{free-software}
 \@openrighttrue\makeatother
 \afterpage{\blankpage}
