--- a/src/free-software.tex
+++ b/src/free-software.tex
@@ -1,10 +1,10 @@
-\lettrine[lraise=-0.03,loversize=0.08]{T}{his book} is \textbf{Libre} and follows the philosophy of
-\urlref{https://www.gnu.org/philosophy/free-sw.en.html}{Free Software}:
-you can use this book as you like, the source is available, you can redistribute
-this book and you can distribute your own version. That means you can print it,
-photocopy it, e-mail it, upload it to websites, change it, translate it, remix it, delete bits,
-and draw all over it.
+\lettrine[lraise=-0.03,loversize=0.08]{こ}{の本}は\textbf{自由}なライセンスに従っており、
+\urlref{https://www.gnu.org/philosophy/free-sw.en.html}{フリーソフトウェア}の哲学に基づいています:
+この本を好きなように利用することができ、ソースは公開されています。また、この本を再配布したり、
+あなた自身のバージョンを配布することもできます。つまり、印刷したり、コピーしたり、メールで送ったり、
+ウェブサイトにアップロードしたり、変更したり、翻訳したり、リミックスしたり、一部を削除したり、
+その上に何かを描いたりすることができます。
 
-This book is Copyleft: if you change the book and distribute your own version, you must also pass these freedoms to its recipients.
-This book uses the Creative Commons Attribution-ShareAlike 4.0 International License
-(\href{http://creativecommons.org/licenses/by-sa/4.0/}{\acronym{CC BY-SA 4.0}}).
+この本はコピーレフトです: 本を変更して自分のバージョンを配布する場合、受け取る人たちにもこれらの自由を認めなければなりません。
+この本はCreative Commons Attribution-ShareAlike 4.0 International License
+(\href{http://creativecommons.org/licenses/by-sa/4.0/}{\acronym{CC BY-SA 4.0}})を使用しています。
