--- a/src/half-title.tex
+++ b/src/half-title.tex
@@ -7,7 +7,8 @@
 
 \begin{raggedleft}
   \fontsize{24pt}{24pt}\selectfont
-  \textbf{Category Theory \\ for Programmers}\\
+  % \textbf{Category Theory \\ for Programmers}\\
+  \textbf{プログラマのための圏論}\\
   \ifdefined\OPTCustomLanguage{%
     \vspace*{1cm}
     \small\selectfont{
@@ -17,9 +18,10 @@
   }
   \fi
   \vspace*{1cm}
-  \fontsize{16pt}{18pt}\selectfont \textit{By } \textbf{Bartosz Milewski}\\
+  \fontsize{16pt}{18pt}\selectfont \textbf{Bartosz Milewski}著\\
   \vspace{1cm}
-  \fontsize{12pt}{14pt}\selectfont \textit{compiled and edited by}\\ \textbf{Igal Tabachnik}\\
+  \fontsize{12pt}{14pt}\selectfont \textbf{Igal Tabachnik}編\\
+  \fontsize{12pt}{14pt}\selectfont \textbf{Isao Sonobe}訳\\
 
 \end{raggedleft}
 
@@ -59,6 +61,7 @@
     \noindent
     Converted from a series of blog posts by \href{https://bartoszmilewski.com/2014/10/28/category-theory-for-programmers-the-preface/}{Bartosz Milewski}.\\
     PDF and book compiled by \href{https://hmemcpy.com}{Igal Tabachnik}.\\
+    Translated to Japanese by \href{https://github.com/sonoisa}{Isao Sonobe}.\\
     \vspace{1.26em}
     \noindent
     \LaTeX{} source code is available on GitHub: \href{https://github.com/hmemcpy/milewski-ctfp-pdf}{https://github.com/hmemcpy/milewski-ctfp-pdf}
