--- a/src/content/0.0/preface.tex
+++ b/src/content/0.0/preface.tex
@@ -1,105 +1,27 @@
 % !TEX root = ../../ctfp-print.tex
 
 \begin{quote}
-  For some time now I've been floating the idea of writing a book about
-  category theory that would be targeted at programmers. Mind you, not
-  computer scientists but programmers --- engineers rather than
-  scientists. I know this sounds crazy and I am properly scared. I can't
-  deny that there is a huge gap between science and engineering because I
-  have worked on both sides of the divide. But I've always felt a very
-  strong compulsion to explain things. I have tremendous admiration for
-  Richard Feynman who was the master of simple explanations. I know I'm no
-  Feynman, but I will try my best. I'm starting by publishing this preface
-  --- which is supposed to motivate the reader to learn category theory
-  --- in hopes of starting a discussion and soliciting feedback.\footnote{
-    You may also watch me teach this material to a live audience, at
-    \href{https://goo.gl/GT2UWU}{https://goo.gl/GT2UWU} (or search
-    ``bartosz milewski category theory'' on YouTube.)}
+  私はしばらくの間、プログラマ向けの圏論の本を書くというアイディアを温めてきました。ここで言うプログラマとは、科学者ではなくエンジニア --- 具体的にはコンピュータ科学者ではなく、現場の技術者を指します。これが狂気に聞こえるかもしれませんが、私は正気です。科学と工学の間には大きな隔たりがあるということは否定できませんが、私は常に物事を説明する強い衝動を感じてきました。Richard Feynmanがシンプルな説明の達人であることに大きな敬意を払っています。私はFeynmanではありませんが、最善を尽くすつもりです。この序文を公開することで --- これは読者に圏論を学ぶ動機を与えるためのものです --- 議論を開始し、フィードバックを募ることを期待しています。\footnote{
+    私がこの素材をライブオーディエンスに教えるのを視聴することもできます。\href{https://goo.gl/GT2UWU}{https://goo.gl/GT2UWU} で検索するか、「bartosz milewski category theory」でYouTubeを検索してください。}
 \end{quote}
 
-\lettrine[lhang=0.17]{I}{will attempt}, in the space of a few paragraphs,
-to convince you that this book is written for you, and whatever
-objections you might have to learning one of the most abstract branches
-of mathematics in your ``copious spare time'' are totally unfounded.
+\lettrine[lhang=0.17]{私}{は}数段落のスペースを使って、この本があなたのために書かれたものであり、あなたが「豊富な余暇」に最も抽象的な数学分野の一つを学ぶべきではないというどんな反論も根拠がないことを納得させようと試みます。
 
-My optimism is based on several observations. First, category theory is
-a treasure trove of extremely useful programming ideas. Haskell
-programmers have been tapping this resource for a long time, and the
-ideas are slowly percolating into other languages, but this process is
-too slow. We need to speed it up.
+私の楽観はいくつかの観察に基づいています。まず、圏論は非常に有用なプログラミングのアイデアの宝庫です。Haskellプログラマは長い間このリソースを利用してきましたが、そのアイデアはゆっくりと他の言語に浸透していますが、このプロセスは遅すぎます。私たちはそれを加速させる必要があります。
 
-Second, there are many different kinds of math, and they appeal to
-different audiences. You might be allergic to calculus or algebra, but
-it doesn't mean you won't enjoy category theory. I would go as far as
-to argue that category theory is the kind of math that is particularly
-well suited for the minds of programmers. That's because category theory
---- rather than dealing with particulars --- deals with structure. It
-deals with the kind of structure that makes programs composable.
+次に、数学には様々な種類があり、それぞれ異なる聴衆を惹きつけます。あなたは微積分や代数にアレルギーを持っているかもしれませんが、だからといって圏論を楽しめないわけではありません。私は圏論が特にプログラマの頭脳に適した数学であるとさえ主張したいです。それは圏論が --- 特定のものではなく --- 構造を扱うからです。プログラムを合成可能にする種類の構造を扱います。
 
-Composition is at the very root of category theory --- it's part of the
-definition of the category itself. And I will argue strongly that
-composition is the essence of programming. We've been composing things
-forever, long before some great engineer came up with the idea of a
-subroutine. Some time ago the principles of structural programming
-revolutionized programming because they made blocks of code composable.
-Then came object oriented programming, which is all about composing
-objects. Functional programming is not only about composing functions
-and algebraic data structures --- it makes concurrency composable ---
-something that's virtually impossible with other programming paradigms.
+合成は圏論の根本にあります --- それは圏自体の定義の一部です。そして私は、プログラミングの本質が合成であると強く主張します。私たちは、優れたエンジニアがサブルーチンのアイデアを思いつくずっと前から、ずっと物事を合成してきました。しばらく前、構造化プログラミングの原理がプログラミングを革命的に変えました。それはコードブロックを合成可能にしました。次にオブジェクト指向プログラミングが登場しましたが、それはオブジェクトの合成に関するものです。関数型プログラミングは、関数と代数的データ構造の合成だけでなく、並行性の合成も可能にします。これは他のプログラミングパラダイムではほぼ不可能です。
 
-Third, I have a secret weapon, a butcher's knife, with which I will
-butcher math to make it more palatable to programmers. When you're a
-professional mathematician, you have to be very careful to get all your
-assumptions straight, qualify every statement properly, and construct
-all your proofs rigorously. This makes mathematical papers and books
-extremely hard to read for an outsider. I'm a physicist by training, and
-in physics we made amazing advances using informal reasoning.
-Mathematicians laughed at the Dirac delta function, which was made up on
-the spot by the great physicist P. A. M. Dirac to solve some
-differential equations. They stopped laughing when they discovered a
-completely new branch of calculus called distribution theory that
-formalized Dirac's insights.
+第三に、私には秘密兵器、数学をプログラマにとってより消化しやすくするための肉切り包丁があります。あなたがプロの数学者であれば、仮定をきちんと整理し、言明を適切に述べて、証明を厳密に構築する必要があります。これにより、数学の論文や本は外部の人にとって非常に読みにくくなります。私は訓練を受けた物理学者であり、物理学では非公式な推論を使用して驚くべき進歩を遂げてきました。数学者はDiracのデルタ関数を笑いましたが、それは偉大な物理学者P. A. M. Diracによって、いくつかの微分方程式を解くためにその場で作られました。彼らがDiracの洞察を形式化した完全に新しい微積分の分野である超関数理論 (distribution theory) を発見したとき、彼らは笑うのをやめました。
 
-Of course when using hand-waving arguments you run the risk of saying
-something blatantly wrong, so I will try to make sure that there is
-solid mathematical theory behind informal arguments in this book. I do
-have a worn-out copy of Saunders Mac Lane's \emph{Categories for
-  the Working Mathematician} on my nightstand.
+もちろん、噛み砕いた説明を用いることで明らかに間違ったことを言うリスクがありますので、この本の非公式な議論の背後にはしっかりとした数学的理論があることを確かめるようにします。私はSaunders Mac Laneの\emph{Categories for the Working Mathematician (邦訳: 圏論の基礎)}の使い古されたコピーを持っています。
 
-Since this is category theory \emph{for programmers} I will illustrate
-all major concepts using computer code. You are probably aware that
-functional languages are closer to math than the more popular imperative
-languages. They also offer more abstracting power. So a natural
-temptation would be to say: You must learn Haskell before the bounty of
-category theory becomes available to you. But that would imply that
-category theory has no application outside of functional programming and
-that's simply not true. So I will provide a lot of C++ examples.
-Granted, you'll have to overcome some ugly syntax, the patterns might
-not stand out from the background of verbosity, and you might be forced
-to do some copy and paste in lieu of higher abstraction, but that's just
-the lot of a C++ programmer.
+これは\emph{プログラマのための}圏論であるため、私はすべての主要な概念をコンピュータコードを使用して説明します。あなたはおそらく、関数型言語がより一般的な命令型言語よりも数学に近いことを知っているでしょう。それはまた、より多くの抽象化力を提供します。したがって、圏論の恩恵を受ける前にHaskellを学ぶ必要があると言いたくなるのは当然かもしれません。しかし、それでは圏論が関数型プログラミング以外に適用できないことを意味することになり、ただ単に正しくありません。したがって、私は多くのC++の例を提供します。確かに、あなたはいくつかの醜い構文を克服する必要があります。パターンが冗長性の背景から際立たないかもしれませんし、高度な抽象化の代わりにコピーアンドペーストを強いられるかもしれませんが、それはC++プログラマの宿命です。
 
-But you're not off the hook as far as Haskell is concerned. You don't
-have to become a Haskell programmer, but you need it as a language for
-sketching and documenting ideas to be implemented in C++. That's exactly
-how I got started with Haskell. I found its terse syntax and powerful
-type system a great help in understanding and implementing C++
-templates, data structures, and algorithms. But since I can't expect the
-readers to already know Haskell, I will introduce it slowly and explain
-everything as I go.
+しかし、Haskellに関してあなたは無関係でいられません。Haskellプログラマになる必要はありませんが、C++で実装されるアイデアをスケッチし、文書化する言語としてそれを必要とします。それはちょうど私がHaskellを始めた方法です。私は、その簡潔な構文と強力な型システムがC++テンプレート、データ構造、およびアルゴリズムの理解と実装に大いに役立つことを発見しました。しかし、読者がすでにHaskellを知っていると期待することはできませんので、ゆっくりと導入し、進むにつれてすべてを説明します。
 
-If you're an experienced programmer, you might be asking yourself: I've
-been coding for so long without worrying about category theory or
-functional methods, so what's changed? Surely you can't help but notice
-that there's been a steady stream of new functional features invading
-imperative languages. Even Java, the bastion of object-oriented
-programming, let the lambdas in. C++ has recently been evolving at a
-frantic pace --- a new standard every few years --- trying to catch up
-with the changing world. All this activity is in preparation for a
-disruptive change or, as we physicists call it, a phase transition. If
-you keep heating water, it will eventually start boiling. We are now in
-the position of a frog that must decide if it should continue swimming
-in increasingly hot water, or start looking for some alternatives.
+経験豊富なプログラマであれば、あなたは自分自身に尋ねているかもしれません: 長い間、圏論や関数型の方法について心配することなくコーディングしてきましたが、何が変わったのでしょうか？あなたは間違いなく、命令型言語に新しい関数型の機能が侵入してくる一貫した流れに気付いているはずです。オブジェクト指向プログラミングの砦であるJavaでさえ、ラムダを受け入れました。C++は最近、急速なペースで進化しており --- 数年ごとに新しい標準が出ています --- 変化する世界に追いつこうとしています。このすべての動きは、破壊的な変化、または私たち物理学者がそれを呼ぶように、相転移に備えるためのものです。あなたが水を加熱し続けると、最終的には沸騰を始めます。私たちは現在、ますます熱くなる水の中で泳ぎ続けるべきか、何らかの代替手段を探し始めるべきかを決定するカエルの立場にあります。
 
 \begin{figure}[H]
   \centering
@@ -107,51 +29,14 @@ in increasingly hot water, or start looking for some alternatives.
 \end{figure}
 
 \noindent
-One of the forces that are driving the big change is the multicore
-revolution. The prevailing programming paradigm, object oriented
-programming, doesn't buy you anything in the realm of concurrency and
-parallelism, and instead encourages dangerous and buggy design. Data
-hiding, the basic premise of object orientation, when combined with
-sharing and mutation, becomes a recipe for data races. The idea of
-combining a mutex with the data it protects is nice but, unfortunately,
-locks don't compose, and lock hiding makes deadlocks more likely and
-harder to debug.
+この大きな変化を推進する力の一つはマルチコア革命です。支配的なプログラミングパラダイムであるオブジェクト指向プログラミングは、並行性と並列性の領域で何の助けも与えてくれません。その代わりに、危険でバグのある設計を奨励します。オブジェクト指向の大前提であるデータの隠蔽は、データの共有と変更と組み合わせると、データ競合の原因となります。データを保護するためにロックを組み合わせるアイデアは良いですが、残念ながら、ロックは合成できませんし、ロックの隠蔽はデッドロックをより起こりやすくし、デバッグを困難にします。
 
-But even in the absence of concurrency, the growing complexity of
-software systems is testing the limits of scalability of the imperative
-paradigm. To put it simply, side effects are getting out of hand.
-Granted, functions that have side effects are often convenient and easy
-to write. Their effects can in principle be encoded in their names and
-in the comments. A function called SetPassword or WriteFile is obviously
-mutating some state and generating side effects, and we are used to
-dealing with that. It's only when we start composing functions that have
-side effects on top of other functions that have side effects, and so
-on, that things start getting hairy. It's not that side effects are
-inherently bad --- it's the fact that they are hidden from view that
-makes them impossible to manage at larger scales. Side effects don't
-scale, and imperative programming is all about side effects.
+しかし、並行性がなくても、ソフトウェアシステムの成長し続けている複雑さは、命令型パラダイムのスケーラビリティの限界を試しています。単純に言えば、副作用は手に負えなくなっています。副作用を持つ関数はしばしば便利で書きやすいものです。それらの効果は原則として、それらの名前やコメントにエンコードされます。SetPasswordやWriteFileという関数は明らかに何らかの状態を変更し、副作用を生成していることがわかりますが、副作用を持つ関数を他の副作用を持つ関数の上に合成し、といったことを続けると、物事は複雑になり始めます。副作用が根本的に悪いわけではありません --- 隠された副作用が大規模な管理が不可能になる原因です。副作用はスケールしないし、命令型プログラミングとは副作用がすべてです。
 
-Changes in hardware and the growing complexity of software are forcing
-us to rethink the foundations of programming. Just like the builders of
-Europe's great gothic cathedrals we've been honing our craft to the
-limits of material and structure. There is an unfinished gothic
-\urlref{http://en.wikipedia.org/wiki/Beauvais_Cathedral}{cathedral in
-  Beauvais}, France, that stands witness to this deeply human struggle
-with limitations. It was intended to beat all previous records of height
-and lightness, but it suffered a series of collapses. Ad hoc measures
-like iron rods and wooden supports keep it from disintegrating, but
-obviously a lot of things went wrong. From a modern perspective, it's a
-miracle that so many gothic structures had been successfully completed
-without the help of modern material science, computer modelling, finite
-element analysis, and general math and physics. I hope future
-generations will be as admiring of the programming skills we've been
-displaying in building complex operating systems, web servers, and the
-internet infrastructure. And, frankly, they should, because we've done
-all this based on very flimsy theoretical foundations. We have to fix
-those foundations if we want to move forward.
+ハードウェアの変化とソフトウェアの複雑さの増大は、プログラミングの基盤を再考することを強いています。ヨーロッパの偉大なゴシック大聖堂の建設者たちのように、私たちは物質と構造の限界に挑むために技術を磨いてきました。フランスのボーヴェにある未完成のゴシック\urlref{http://en.wikipedia.org/wiki/Beauvais_Cathedral}{大聖堂}は、この限界との深い人間的な闘いの証人です。それはすべての以前の記録を高さと軽さで打ち負かすことを意図していましたが、度重なる崩壊に見舞われました。鉄の棒や木製の支えが崩壊から守っていますが、明らかに多くの問題があります。現代の視点から見れば、近代的な材料科学、コンピュータモデリング、有限要素法、そして一般的な数学や物理学の助けなしに多くのゴシック建築が成功裏に完成したことは奇跡です。私は将来の世代が、複雑なオペレーティングシステム、ウェブサーバー、そしてインターネットインフラストラクチャを構築するために私たちが見せているプログラミング技術に同じように感心することを望みます。そして、正直に言って、彼らはそうすべきです。なぜなら、私たちは非常に脆弱な理論的基盤に基づいてこれらを行ってきたからです。私たちは前進したいのであれば、それらの基盤を修正する必要があります。
 
 \begin{figure}
   \centering
   \includegraphics[totalheight=0.5\textheight]{images/beauvais_interior_supports.jpg}
-  \caption{Ad hoc measures preventing the Beauvais cathedral from collapsing.}
+  \caption{ボーヴェ大聖堂の崩壊を防ぐための場当たり的な措置}
 \end{figure}
