--- a/src/content/1.2/types-and-functions.tex
+++ b/src/content/1.2/types-and-functions.tex
@@ -1,15 +1,10 @@
 % !TEX root = ../../ctfp-print.tex
 
-\lettrine[lhang=0.17]{T}{he category of types and functions} plays an important role in
-programming, so let's talk about what types are and why we need them.
+\lettrine[lhang=0.17]{型}{と関数}の圏はプログラミングにおいて重要な役割を果たします。そこで、型とは何か、そしてなぜ必要なのかについて語りましょう。
 
-\section{Who Needs Types?}
+\section{誰が型を必要とするのか？}
 
-There seems to be some controversy about the advantages of static vs.
-dynamic and strong vs. weak typing. Let me illustrate these choices with
-a thought experiment. Imagine millions of monkeys at computer keyboards
-happily hitting random keys, producing programs, compiling, and running
-them.
+静的対動的、強い対弱い型付けに関しては、その利点を巡って様々な議論があります。これらの選択を一つの思考実験で説明しましょう。コンピュータのキーボードでランダムにキーを打ち、プログラムを生成し、コンパイルし、そして実行する何百万もの猿を想像してください。
 
 \begin{figure}[H]
   \centering
@@ -17,224 +12,79 @@ them.
 \end{figure}
 
 \noindent
-With machine language, any combination of bytes produced by monkeys
-would be accepted and run. But with higher level languages, we do
-appreciate the fact that a compiler is able to detect lexical and
-grammatical errors. Lots of monkeys will go without bananas, but the
-remaining programs will have a better chance of being useful. Type
-checking provides yet another barrier against nonsensical programs.
-Moreover, whereas in a dynamically typed language, type mismatches would
-be discovered at runtime, in strongly typed statically checked languages,
-type mismatches are discovered at compile time, eliminating lots of
-incorrect programs before they have a chance to run.
+マシン語では、猿によって生成されたバイトの任意の組み合わせが受け入れられ、実行されます。しかし、高級言語を使うと、コンパイラが字句的、文法的なエラーを検出できることに感謝します。多くの猿はバナナを失いますが、残ったプログラムは有用である可能性が高くなります。型チェックは、意味を成さないプログラムに対するもう一つの障壁を提供します。さらに、動的型付け言語では型の不一致がランタイムで発見されますが、強く静的に型チェックされた言語では、型の不一致がコンパイル時に発見され、実行される前に多くの不正なプログラムを排除します。
 
-So the question is, do we want to make monkeys happy, or do we want to
-produce correct programs?
+したがって、問題は私たちが猿を喜ばせたいのか、それとも正しいプログラムを作りたいのかということです。
 
-The usual goal in the typing monkeys thought experiment is the
-production of the complete works of Shakespeare. Having a spell checker
-and a grammar checker in the loop would drastically increase the odds.
-The analog of a type checker would go even further by making sure that,
-once Romeo is declared a human being, he doesn't sprout leaves or trap
-photons in his powerful gravitational field.
+猿のタイピング実験での通常の目標はシェイクスピアの全作品を生産することです。スペルチェッカーや文法チェッカーがループ内にいれば、オッズが劇的に上がります。型チェッカーの類似物は、ロミオが人間と宣言されたら、葉を生やしたり、強力な重力場で光子を捕らえたりすることがないようにさらに確実にします。
 
-\section{Types Are About Composability}
+\section{型は合成可能性についてです}
 
-Category theory is about composing arrows. But not any two arrows can be
-composed. The target object of one arrow must be the same as the source
-object of the next arrow. In programming we pass the results of
-one function to another. The program will not work if the target
-function is not able to correctly interpret the data produced by the
-source function. The two ends must fit for the composition to work. The
-stronger the type system of the language, the better this match can be
-described and mechanically verified.
+圏論は射を合成することについてです。しかし、どの二つの射も合成できるわけではありません。一つの射のターゲット対象が次の射のソース対象と同じでなければなりません。プログラミングでは、一つの関数の結果を別の関数に渡します。対象関数がソース関数によって生成されたデータを正しく解釈できない場合、プログラムは動作しません。両端が合致しなければ合成は機能しません。言語の型システムが強ければ強いほど、このマッチを記述し、機械的に検証できるようになります。
 
-The only serious argument I hear against strong static type checking is
-that it might eliminate some programs that are semantically correct. In
-practice, this happens extremely rarely and, in any case, every language
-provides some kind of a backdoor to bypass the type system when that's
-really necessary. Even Haskell has \code{unsafeCoerce}. But such
-devices should be used judiciously. Franz Kafka's character, Gregor
-Samsa, breaks the type system when he metamorphoses into a giant bug,
-and we all know how it ends.
+強い静的型チェックに対する唯一の真剣な反論は、それが意味的に正しいいくつかのプログラムを排除する可能性があるということです。実際には、これは極めてまれにしか起こりませんし、いずれにせよ、すべての言語は型システムをバイパスする何らかの方法を提供しています。Haskellでさえも\code{unsafeCoerce}があります。しかし、このような装置は慎重に使用するべきです。フランツ・カフカのキャラクター、グレゴール・ザムザは、巨大な虫に変態するときに型システムを破壊し、その結果は皆さんも知っての通りです。
 
-Another argument I hear a lot is that dealing with types imposes too
-much burden on the programmer. I could sympathize with this sentiment
-after having to write a few declarations of iterators in C++ myself,
-except that there is a technology called \newterm{type inference} that lets
-the compiler deduce most of the types from the context in which they are
-used. In C++, you can now declare a variable \code{auto} and let the
-compiler figure out its type.
+もう一つよく耳にする反論は、型付けがプログラマに多大な負担を課すというものです。私自身、C++でイテレータのいくつかの宣言を書かなければならなかった後では、この感情に同情することができました。ただし、\newterm{型推論}と呼ばれる技術があり、コンパイラが使用される文脈からほとんどの型を推論させることができます。C++では、変数を\code{auto}と宣言し、コンパイラにその型を決定させることができます。
 
-In Haskell, except on rare occasions, type annotations are purely
-optional. Programmers tend to use them anyway, because they can tell a
-lot about the semantics of code, and they make compilation errors easier
-to understand. It's a common practice in Haskell to start a project by
-designing the types. \sloppy{Later, type annotations drive the implementation
-  and become compiler-enforced comments.}
+Haskellでは、まれな場合を除き、型アノテーションは完全にオプショナルです。それでも、プログラマはそれらを使用する傾向があります。なぜなら、それらはコードの意味論について多くを語り、コンパイルエラーを理解しやすくするからです。Haskellではプロジェクトを始めるときに型を設計することが一般的な慣習です。\sloppy{後に、型アノテーションは実装を指導し、コンパイラによって強制されるコメントになります。}
 
-Strong static typing is often used as an excuse for not testing the
-code. You may sometimes hear Haskell programmers saying, ``If it
-compiles, it must be correct.'' Of course, there is no guarantee that a
-type-correct program is correct in the sense of producing the right
-output. The result of this cavalier attitude is that in several studies
-Haskell didn't come as strongly ahead of the pack in code quality as one
-would expect. It seems that, in the commercial setting, the pressure to
-fix bugs is applied only up to a certain quality level, which has
-everything to do with the economics of software development and the
-tolerance of the end user, and very little to do with the programming
-language or methodology. A better criterion would be to measure how many
-projects fall behind schedule or are delivered with drastically reduced
-functionality.
+強い静的型付けは、コードをテストしない言い訳としてよく使われます。時々、Haskellのプログラマから「コンパイルされれば、それは正しいに違いない」という話を聞くかもしれません。もちろん、型が正しいということは、出力が正しいということを保証するものではありません。この無謀な態度の結果、いくつかの研究では、Haskellが一般に期待されるほどコードの品質で他の言語よりも強く抜け出ていないことがわかりました。商業環境では、バグを修正する圧力は特定の品質レベルまでしか適用されず、それはソフトウェア開発の経済とエンドユーザーの許容とはほとんど関係がなく、プログラミング言語や方法論とはほとんど関係がありません。より良い基準は、予定より遅れるプロジェクトの数、または大幅に機能が削減されて納品されるプロジェクトの数を測定することです。
 
-As for the argument that unit testing can replace strong typing,
-consider the common refactoring practice in strongly typed languages:
-changing the type of an argument of a particular function. In a strongly
-typed language, it's enough to modify the declaration of that function
-and then fix all the build breaks. In a weakly typed language, the fact
-that a function now expects different data cannot be propagated to call
-sites. Unit testing may catch some of the mismatches, but testing is
-almost always a probabilistic rather than a deterministic process.
-Testing is a poor substitute for proof.
+単体テストが強い型付けを置き換えることができるという議論については、強く型付けされた言語での一般的なリファクタリングの練習を考えてみましょう: 特定の関数の引数の型を変更すること。強く型付けされた言語では、その関数の宣言を変更し、その後すべてのビルドブレークを修正するだけで済みます。弱く型付けされた言語では、関数が異なるデータを期待するという事実を呼び出し元に伝播させることができません。単体テストは一部の不一致を捉えるかもしれませんが、テストはほぼ常に確率的であり、決定的ではありません。テストは証明の貧弱な代替です。
 
-\section{What Are Types?}
+\section{型とは何か？}
 
-The simplest intuition for types is that they are sets of values. The
-type \code{Bool} (remember, concrete types start with a capital letter
-in Haskell) is a two-element set of \code{True} and \code{False}.
-Type \code{Char} is a set of all Unicode characters like
-\code{a} or \code{ą}.
+型の最もシンプルな直感は、それらが値の集合であるということです。型\code{Bool} (Haskellでは具体的な型は大文字で始まることを思い出してください) は、\code{True}と\code{False}の二つの要素からなる集合です。型\code{Char}は、\code{a}や\code{ą}のようなすべてのUnicode文字の集合です。
 
-Sets can be finite or infinite. The type of \code{String}, which is a
-synonym for a list of \code{Char}, is an example of an infinite set.
+集合は有限であることも無限であることもあります。型\code{String}、これは\code{Char}のリストの別名ですが、無限集合の例です。
 
-When we declare \code{x} to be an \code{Integer}:
+\code{x}を\code{Integer}と宣言するとき: 
 
 \src{snippet01}
-we are saying that it's an element of the set of integers.
-\code{Integer} in Haskell is an infinite set, and it can be used to do
-arbitrary precision arithmetic. There is also a finite-set \code{Int}
-that corresponds to machine type, just like the C++ \code{int}.
+私たちは、それが整数の集合の要素であると言っています。\code{Integer}はHaskellでは無限集合であり、任意精度の算術を行うために使用できます。マシン型に対応する有限集合\code{Int}もあります。これはC++の\code{int}のようなものです。
 
-There are some subtleties that make this identification of types and
-sets tricky. There are problems with polymorphic functions that involve
-circular definitions, and with the fact that you can't have a set of all
-sets; but as I promised, I won't be a stickler for math. The great thing
-is that there is a category of sets, which is called $\Set$, and
-we'll just work with it. In $\Set$, objects are sets and morphisms
-(arrows) are functions.
+型と集合のこの識別には、多相関数を含む循環定義や、すべての集合の集合を持つことができないという事実など、いくつかの微妙な問題があります。しかし、約束しましたが、私は数学に厳密であることはありません。素晴らしいことに、集合の圏があり、それは$\Set$と呼ばれ、私たちはそれと単に作業します。$\Set$では、対象は集合であり、射 (矢印) は関数です。
 
-$\Set$ is a very special category, because we can actually peek
-inside its objects and get a lot of intuitions from doing that. For
-instance, we know that an empty set has no elements. We know that there
-are special one-element sets. We know that functions map elements of one
-set to elements of another set. They can map two elements to one, but
-not one element to two. We know that an identity function maps each
-element of a set to itself, and so on. The plan is to gradually forget
-all this information and instead express all those notions in purely
-categorical terms, that is in terms of objects and arrows.
+$\Set$は非常に特別な圏です。なぜなら、実際にその対象の中を覗いて多くの直感を得ることができるからです。例えば、空集合には要素がないことを知っています。特別な単集合があることも知っています。関数が一つの集合の要素を別の集合の要素にマップすることを知っています。それらは二つの要素を一つにマップすることはできますが、一つの要素を二つにマップすることはできません。恒等関数が集合の各要素をそれ自身にマップすることを知っています、などなど。計画は徐々にこれらすべての情報を忘れていき、その代わりにすべての概念を純粋に圏論的な用語、つまり対象と射の観点から表現することです。
 
-In the ideal world we would just say that Haskell types are sets and
-Haskell functions are mathematical functions between sets. There is just
-one little problem: A mathematical function does not execute any code
---- it just knows the answer. A Haskell function has to calculate the
-answer. It's not a problem if the answer can be obtained in a finite
-number of steps --- however big that number might be. But there are some
-calculations that involve recursion, and those might never terminate. We
-can't just ban non-terminating functions from Haskell because
-distinguishing between terminating and non-terminating functions is
-undecidable --- the famous halting problem. That's why computer
-scientists came up with a brilliant idea, or a major hack, depending on
-your point of view, to extend every type by one more special value
-called the \newterm{bottom} and denoted by \code{\_|\_}, or
-Unicode $\bot$. This ``value'' corresponds to a non-terminating computation.
-So a function declared as:
+理想的な世界では、Haskellの型は集合であり、Haskellの関数は集合間の数学的関数であると単純に言えばいいのですが、ひとつだけ小さな問題があります。数学的な関数はコードを実行しません --- 答えを知っているだけです。Haskell関数は答えを計算しなければなりません。答えが有限ステップ数で得られる場合は問題ありません --- その数がいかに大きくても。しかし、再帰を含む計算があり、それらは決して終了しない可能性があります。Haskellから非終了関数を禁止することはできません。なぜなら、終了する関数と非終了関数を区別することは決定不能だからです --- 有名な停止問題です。そのため、計算機科学者は、型を\newterm{ボトム}と呼ばれる特別な値で拡張するという天才的、または視点によっては大胆なアイデアを思いつきました。この「値」は、非終了計算に対応します。従って、関数が次のように宣言されている場合: 
 
 \src{snippet02}
-may return \code{True}, \code{False}, or \code{\_|\_};
-the latter meaning that it would never terminate.
+それは\code{True}、\code{False}、または\code{\_|\_}を返すかもしれません。後者は、それが決して終了しないことを意味します。
 
-Interestingly, once you accept the bottom as part of the type system, it
-is convenient to treat every runtime error as a bottom, and even allow
-functions to return the bottom explicitly. The latter is usually done
-using the expression \code{undefined}, as in:
+興味深いことに、ボトムを型システムの一部として受け入れると、すべてのランタイムエラーをボトムとして扱い、関数が明示的にボトムを返すことを許可することが便利です。後者は通常、次の式を使用して行われます: 
 
 \src{snippet03}
-This definition type checks because \code{undefined} evaluates to
-bottom, which is a member of any type, including \code{Bool}. You can
-even write:
+この定義は型チェックを通過します。なぜなら、\code{undefined}はボトムに評価され、ボトムは\code{Bool}を含む任意の型のメンバーだからです。あなたはさらに書くことができます: 
 
 \src{snippet04}
-(without the \code{x}) because the bottom is also a member of the type
-\code{Bool -> Bool}.
+ (\code{x}なしで) なぜなら、ボトムは型\code{Bool -> Bool}のメンバーでもあるからです。
 
-Functions that may return bottom are called partial, as opposed to total
-functions, which return valid results for every possible argument.
+ボトムを返す可能性のある関数は部分関数と呼ばれ、有効な結果をすべての可能な引数に対して返す全関数と対比されます。
 
-Because of the bottom, you'll see the category of Haskell types and
-functions referred to as $\Hask$ rather than $\Set$. From
-the theoretical point of view, this is the source of never-ending
-complications, so at this point I will use my butcher's knife and
-terminate this line of reasoning. From the pragmatic point of view, it's
-okay to ignore non-terminating functions and bottoms, and treat
-$\Hask$ as bona fide $\Set$.\footnote{Nils Anders Danielsson,
+ボトムのために、Haskellの型と関数の圏は$\Set$ではなく$\Hask$として言及されることがあります。理論的な観点から、これは絶えず続く複雑さの源です。ですので、この点においては私は私の料理人のナイフを使い、この議論の線を終わらせます。実用的な観点からは、非終了関数とボトムを無視し、$\Hask$を正当な$\Set$として扱っても構いません。\footnote{Nils Anders Danielsson,
   John Hughes, Patrik Jansson, Jeremy Gibbons, \href{http://www.cs.ox.ac.uk/jeremy.gibbons/publications/fast+loose.pdf}{
-    Fast and Loose Reasoning is Morally Correct}. This paper provides justification for ignoring bottoms in most contexts.}
+    Fast and Loose Reasoning is Morally Correct}. この論文は、ほとんどの文脈でボトムを無視することの正当化を提供します。}
 
-\section{Why Do We Need a Mathematical Model?}
+\section{なぜ数学的モデルが必要なのか？}
 
-As a programmer you are intimately familiar with the syntax and grammar
-of your programming language. These aspects of the language are usually
-described using formal notation at the very beginning of the language
-spec. But the meaning, or semantics, of the language is much harder to
-describe; it takes many more pages, is rarely formal enough, and almost
-never complete. Hence the never ending discussions among language
-lawyers, and a whole cottage industry of books dedicated to the exegesis
-of the finer points of language standards.
+プログラマとして、あなたは使用しているプログラミング言語の構文と文法に非常に精通しています。言語のこれらの側面は通常、言語の仕様の最初に公式な表記を使って記述されています。しかし、言語の意味、すなわち意味論を記述することははるかに困難です。それは多くのページを取り、めったに十分に形式的ではなく、ほとんど完全ではありません。これが、言語弁護士間の絶え間ない議論と、言語標準の微妙な点の注釈に捧げられた本の全業界につながります。
 
-There are formal tools for describing the semantics of a language but,
-because of their complexity, they are mostly used with simplified
-academic languages, not real-life programming behemoths. One such tool
-called \newterm{operational semantics} describes the mechanics of program
-execution. It defines a formalized idealized interpreter. The semantics
-of industrial languages, such as C++, is usually described using
-informal operational reasoning, often in terms of an ``abstract
-machine.''
+言語の意味論を記述するための公式なツールがありますが、その複雑さのため、実際のプログラミングの巨人ではなく、簡略化されたアカデミック言語で主に使用されています。そのようなツールの一つである\newterm{操作的意味論}は、プログラム実行のメカニズムを記述します。それは、形式化された理想化されたインタプリターを定義します。産業的な言語の意味論、例えばC++は、通常「抽象マシン」という用語で非公式な操作的推論を使用して記述されます。
 
-The problem is that it's very hard to prove things about programs using
-operational semantics. To show a property of a program you essentially
-have to ``run it'' through the idealized interpreter.
+問題は、操作的意味論を使用してプログラムについてのことを証明するのが非常に難しいということです。プログラムの特性を示すためには、基本的に理想化されたインタープリターを通して「実行」しなければなりません。
 
-It doesn't matter that programmers never perform formal proofs of
-correctness. We always ``think'' that we write correct programs. Nobody
-sits at the keyboard saying, ``Oh, I'll just throw a few lines of code
-and see what happens.'' We think that the code we write will perform
-certain actions that will produce desired results. We are usually quite
-surprised when it doesn't. That means we do reason about programs we
-write, and we usually do it by running an interpreter in our heads. It's
-just really hard to keep track of all the variables. Computers are good
-at running programs --- humans are not! If we were, we wouldn't need
-computers.
+プログラマが
 
-But there is an alternative. It's called \newterm{denotational semantics}
-and it's based on math. In denotational semantics every programming
-construct is given its mathematical interpretation. With that, if you
-want to prove a property of a program, you just prove a mathematical
-theorem. You might think that theorem proving is hard, but the fact is
-that we humans have been building up mathematical methods for thousands
-of years, so there is a wealth of accumulated knowledge to tap into.
-Also, as compared to the kind of theorems that professional
-mathematicians prove, the problems that we encounter in programming are
-usually quite simple, if not trivial.
+正確性の正式な証明を決して行わないとしても、私たちは常に正しいプログラムを書いていると「思って」います。キーボードに座って、「さて、数行のコードを投げて何が起こるか見てみましょう」と言う人は誰もいません。私たちは書いたコードが望ましい結果を生成する特定のアクションを実行すると考えています。それがそうでない場合、私たちは通常かなり驚きます。つまり、私たちは書いたプログラムについて常に推論しているのです、そして、私たちは通常それを頭の中でインタプリターを実行することによって行います。変数を追跡するのは本当に難しいだけです。コンピューターはプログラムを実行するのが得意です --- 人間はそうではありません！もし私たちがそうだったら、私たちはコンピュータを必要としませんでした。
 
-Consider the definition of a factorial function in Haskell, which is a
-language quite amenable to denotational semantics:
+しかし、代わりがあります。それは\newterm{表示的意味論}と呼ばれ、数学に基づいています。表示的意味論では、すべてのプログラミング構造にその数学的解釈が与えられます。それにより、プログラムの特性を証明したい場合は、数学的定理を証明するだけです。定理証明が難しいと思うかもしれませんが、実際は、何千年もの間、人類は数学的方法を構築してきたので、利用できる蓄積された知識がたくさんあります。また、専門の数学者が証明する種類の定理と比べると、プログラミングで遭遇する問題は通常かなり単純で、場合によっては自明です。
+
+Haskellにおける階乗関数の定義を考えてみましょう。これは表示的意味論にかなり適している言語です: 
 
 \src{snippet05}
-The expression \code{{[}1..n{]}} is a list of integers from \code{1} to \code{n}.
-The function \code{product} multiplies all elements of a list. That's
-just like a definition of factorial taken from a math text. Compare this
-with C:
+式\code{{[}1..n{]}}は\code{1}から\code{n}までの整数のリストです。
+関数\code{product}はリストのすべての要素を掛け合わせます。これは数学のテキストから取った階乗の定義のようなものです。これをCで比較してみましょう: 
 
 \begin{snip}{c}
 int fact(int n) {
@@ -245,167 +95,70 @@ int fact(int n) {
     return result;
 }
 \end{snip}
-Need I say more?
+これ以上言う必要がありますか？
 
-Okay, I'll be the first to admit that this was a cheap shot! A factorial
-function has an obvious mathematical denotation. An astute reader might
-ask: What's the mathematical model for reading a character from the
-keyboard or sending a packet across the network? For the longest time
-that would have been an awkward question leading to a rather convoluted
-explanation. It seemed like denotational semantics wasn't the best fit
-for a considerable number of important tasks that were essential for
-writing useful programs, and which could be easily tackled by
-operational semantics. The breakthrough came from category theory.
-Eugenio Moggi discovered that computational effect can be mapped to
-monads. This turned out to be an important observation that not only
-gave denotational semantics a new lease on life and made pure functional
-programs more usable, but also shed new light on traditional
-programming. I'll talk about monads later, when we develop more
-categorical tools.
+さて、私が最初に認めるとしましょう、これは安いショットでした！階乗関数には明らかな数学的表現があります。鋭い読者は尋ねるかもしれません: キーボードから文字を読み取る、またはネットワークを介してパケットを送信するといった、数学的モデルは何ですか？長い間、それはおそらくかなり複雑な説明につながる厄介な質問でした。表示的意味論は、便利なプログラムを書くために不可欠な多くの重要なタスクに最適ではないようであり、それらは操作的意味論によって簡単に取り組むことができました。突破口は圏論から来ました。
+Eugenio Moggiは、計算効果をモナドにマッピングすることができることを発見しました。これは、表示的意味論に新たな命を吹き込み、純粋関数型プログラムをより使いやすくし、伝統的なプログラミングに新たな光を当てるだけでなく、重要な観察でした。私たちがより多くの圏論的ツールを開発するときに、モナドについて話します。
 
-One of the important advantages of having a mathematical model for
-programming is that it's possible to perform formal proofs of
-correctness of software. This might not seem so important when you're
-writing consumer software, but there are areas of programming where the
-price of failure may be exorbitant, or where human life is at stake. But
-even when writing web applications for the health system, you may
-appreciate the thought that functions and algorithms from the Haskell
-standard library come with proofs of correctness.
+プログラミングのための数学的モデルを持つことの重要な利点の一つは、ソフトウェアの正確性の形式的証明を実行することが可能であるということです。これは、消費者向けソフトウェアを書いているときはそれほど重要ではないかもしれませんが、失敗の代償が法外である、または人命にかかわるプログラミングの領域があります。しかし、健康システムのためのWebアプリケーションを書いているときでさえ、Haskell標準ライブラリの関数やアルゴリズムが正確性の証明を伴っているという考えを歓迎するかもしれません。
 
-\section{Pure and Dirty Functions}
+\section{純粋関数と汚い関数}
 
-The things we call functions in C++ or any other imperative language,
-are not the same things mathematicians call functions. A mathematical
-function is just a mapping of values to values.
+C++や他の任意の命令型言語で私たちが関数と呼ぶものは、数学者が関数と呼ぶものと同じものではありません。数学的な関数は単に値から値へのマッピングです。
 
-We can implement a mathematical function in a programming language: Such
-a function, given an input value will calculate the output value. A
-function to produce a square of a number will probably multiply the
-input value by itself. It will do it every time it's called, and it's
-guaranteed to produce the same output every time it's called with the
-same input. The square of a number doesn't change with the phases of the
-Moon.
+プログラミング言語で数学的な関数を実装することができます: そのような関数は、入力値を与えられると出力値を計算します。数の二乗を生成する関数はおそらく入力値をそれ自身で乗算します。それは呼ばれるたびに、そして同じ入力で呼ばれるたびに、同じ出力を生成することが保証されます。月の位相と共に数の二乗は変わりません。
 
-Also, calculating the square of a number should not have a side effect
-of dispensing a tasty treat for your dog. A ``function'' that does that
-cannot be easily modelled as a mathematical function.
+また、数の二乗を計算することがあなたの犬に美味しいおやつを配る副作用を持っているべきではありません。そのような「関数」は数学的な関数として簡単にモデル化することができません。
 
-In programming languages, functions that always produce the same result
-given the same input and have no side effects are called \newterm{pure
-  functions}. In a pure functional language like Haskell all functions are
-pure. Because of that, it's easier to give these languages denotational
-semantics and model them using category theory. As for other languages,
-it's always possible to restrict yourself to a pure subset, or reason
-about side effects separately. Later we'll see how monads let us model
-all kinds of effects using only pure functions. So we really don't lose
-anything by restricting ourselves to mathematical functions.
+プログラミング言語で、同じ入力が与えられたときに常に同じ結果を生成し、副作用がない関数は\newterm{純粋関数}と呼ばれます。純粋関数型言語であるHaskellでは、すべての関数が純粋です。そのため、これらの言語に表示的意味論を与え、圏論を使ってモデル化することが容易です。他の言語については、自分自身を純粋なサブセットに制限するか、副作用を別に推論することが常に可能です。後ほど、モナドがどのようにして純粋関数のみを使用してあらゆる種類の副作用をモデル化することができるかを見ていきます。従って、数学的な関数に自分たちを制限することで、実際には何も失うことはありません。
 
-\section{Examples of Types}
+\section{型の例}
 
-Once you realize that types are sets, you can think of some rather
-exotic types. For instance, what's the type corresponding to an empty
-set? No, it's not C++ \code{void}, although this type \emph{is} called
-\code{Void} in Haskell. It's a type that's not inhabited by any
-values. You can define a function that takes \code{Void}, but you can
-never call it. To call it, you would have to provide a value of the type
-\code{Void}, and there just aren't any. As for what this function can
-return, there are no restrictions whatsoever. It can return any type
-(although it never will, because it can't be called). In other words
-it's a function that's polymorphic in the return type. Haskellers have a
-name for it:
+一度に型が集合であると認識すると、かなり風変わりな型を考えることができます。例えば、空集合に対応する型は何でしょうか？いいえ、それはC++の\code{void}ではありませんが、この型はHaskellでは\code{Void}と呼ばれています。それはどんな値も持たない型です。あなたは\code{Void}を取る関数を定義することができますが、それを決して呼び出すことはできません。それを呼び出すためには、\code{Void}型の値を提供しなければならず、そんなものは存在しません。この関数が返すことができるものに制限はまったくありません。それは任意の型を返すことができます (ただし、それが決して呼び出されないため、実際には返すことはありません) 。言い換えれば、それは返り値の型において多相的な関数です。Haskellersはそれに名前をつけます: 
 
 \src{snippet06}
-(Remember, \code{a} is a type variable that can stand for any type.)
-The name is not coincidental. There is deeper interpretation of types
-and functions in terms of logic called the Curry-Howard isomorphism. The
-type \code{Void} represents falsity, and the type of the function
-\code{absurd} corresponds to the statement that from falsity follows
-anything, as in the Latin adage ``ex falso sequitur quodlibet.''
+ (思い出してください、\code{a}は任意の型を表すことができる型変数です。) この名前は偶然ではありません。型と関数のより深い解釈が、Curry-Howard対応と呼ばれる論理の観点からあります。型\code{Void}は偽を表し、関数\code{absurd}の型は、ラテンの格言「ex falso sequitur quodlibet」、つまり偽からは何でも導かれる、に対応します。
 
-Next is the type that corresponds to a singleton set. It's a type that
-has only one possible value. This value just ``is.'' You might not
-immediately recognize it as such, but that is the C++ \code{void}.
-Think of functions from and to this type. A function from \code{void}
-can always be called. If it's a pure function, it will always return the
-same result. Here's an example of such a function:
+次は、単集合に対応する型です。それはただ「存在する」1つの可能な値を持つ型です。これをすぐに認識できないかもしれませんが、それはC++の\code{void}です。この型からとこの型への関数を考えてみてください。 \code{void}からの関数は常に呼び出すことができます。純粋関数であれば、常に同じ結果を返します。ここにそのような関数の例があります: 
 
 \begin{snip}{c}
 int f44() { return 44; }
 \end{snip}
-You might think of this function as taking ``nothing'', but as we've
-just seen, a function that takes ``nothing'' can never be called because
-there is no value representing ``nothing.'' So what does this function
-take? Conceptually, it takes a dummy value of which there is only one
-instance ever, so we don't have to mention it explicitly. In Haskell,
-however, there is a symbol for this value: an empty pair of parentheses,
-\code{()}. So, by a funny coincidence (or is it a coincidence?), the
-call to a function of void looks the same in C++ and in Haskell. Also,
-because of the Haskell's love of terseness, the same symbol \code{()}
-is used for the type, the constructor, and the only value corresponding
-to a singleton set. So here's this function in Haskell:
+あなたはこの関数が「何も取らない」と思うかもしれませんが、私たちがちょうど見たように、「何も」を取る関数は、それを呼び出すための値が「何も」代表しないため、決して呼び出すことができません。では、この関数は何を取るのでしょうか？概念的には、それは唯一のインスタンスが存在するダミー値を取ります。従って、私たちはそれを明示的に言及する必要はありません。しかし、Haskellではこの値に対するシンボルがあります: 空の丸括弧、\code{()}。ですから、面白い偶然に (それとも偶然ではないのでしょうか？) 、void型の関数の呼び出しはC++とHaskellで同じように見えます。また、Haskellの簡潔さを愛するために、同じシンボル\code{()}が、
+
+単集合に対応する型、コンストラクタ、および唯一の値を表すために使用されます。だから、ここにHaskellでのこの関数があります: 
 
 \src{snippet07}
-The first line declares that \code{f44} takes the type \code{()},
-pronounced ``unit,'' into the type \code{Integer}. The second line
-defines \code{f44} by pattern matching the only constructor for unit,
-namely \code{()}, and producing the number 44. You call this function
-by providing the unit value \code{()}:
+最初の行は、\code{f44}が型\code{()}、つまり「Unit型」から\code{Integer}型への関数であると宣言します。2行目は\code{f44}を定義し、Unit型の唯一のコンストラクタ、つまり\code{()}にパターンマッチングをして、数値44を生成します。この関数を呼び出すにはUnit値\code{()}を提供します: 
 
 \begin{snip}{c}
 f44 ()
 \end{snip}
-Notice that every function of unit is equivalent to picking a single
-element from the target type (here, picking the \code{Integer} 44). In
-fact you could think of \code{f44} as a different representation for
-the number 44. This is an example of how we can replace explicit mention
-of elements of a set by talking about functions (arrows) instead.
-Functions from unit to any type $A$ are in one-to-one correspondence with
-the elements of that set $A$.
+Unit型から任意の型$A$への関数は、その集合$A$の要素と一対一の対応関係にあることに注意してください。
 
-What about functions with the \code{void} return type, or, in Haskell,
-with the unit return type? In C++ such functions are used for side
-effects, but we know that these are not real functions in the
-mathematical sense of the word. A pure function that returns unit does
-nothing: it discards its argument.
+Unitを返す関数、つまりHaskellではUnitを返す型についてはどうでしょうか？C++ではこのような関数は副作用のために使用されますが、私たちはそれらが数学的な意味での実際の関数ではないことを知っています。Unitを返す純粋関数は何もしません: それはその引数を破棄します。
 
-Mathematically, a function from a set $A$ to a singleton set maps every
-element of $A$ to the single element of that singleton set. For every $A$
-there is exactly one such function. Here's this function for
-\code{Integer}:
+数学的には、集合$A$から単集合への関数は、$A$のすべての要素をその単集合の単一要素にマップします。すべての$A$に対して、正確に1つのそのような関数があります。ここに\code{Integer}のためのその関数があります: 
 
 \src{snippet08}
-You give it any integer, and it gives you back a unit. In the spirit of
-terseness, Haskell lets you use the wildcard pattern, the underscore,
-for an argument that is discarded. This way you don't have to invent a
-name for it. So the above can be rewritten as:
+あなたはそれに任意の整数を与え、それはあなたにUnitを返します。簡潔さの精神で、Haskellはワイルドカードパターンであるアンダースコアを、捨てられる引数に対して使用することを許可します。この方法で、それに名前を発明する必要はありません。ですから、上記は次のように書き換えることができます: 
 
 \src{snippet09}
-Notice that the implementation of this function not only doesn't depend
-on the value passed to it, but it doesn't even depend on the type of the
-argument.
+この関数の実装は、それに渡された値に依存しないだけでなく、引数の型にも依存しません。
 
-Functions that can be implemented with the same formula for any type are
-called parametrically polymorphic. You can implement a whole family of
-such functions with one equation using a type parameter instead of a
-concrete type. What should we call a polymorphic function from any type
-to unit type? Of course we'll call it \code{unit}:
+任意の型に対して同じ公式で実装できる関数は、パラメトリック多相性を持つと言われます。あなたは具体的な型の代わりに型パラメータを使って1つの方程式でそのような関数の全ての族を実装することができます。任意の型からUnit型への多相関数を何と呼ぶべきか？もちろん\code{unit}と呼びます: 
 
 \src{snippet10}
-In C++ you would write this function as:
+C++では、この関数を次のように書きます: 
 
 \begin{snip}{cpp}
 template<class T>
 void unit(T) {}
 \end{snip}
-Next in the typology of types is a two-element set. In C++ it's called
-\code{bool} and in Haskell, predictably, \code{Bool}. The difference
-is that in C++ \code{bool} is a built-in type, whereas in Haskell it
-can be defined as follows:
+次に、型の分類の中で二要素集合があります。C++では\code{bool}と呼ばれ、予測可能にHaskellでは\code{Bool}と呼ばれます。違いは、C++の\code{bool}は組み込み型であるのに対し、Haskellでは次のように定義できます: 
 
 \src{snippet11}
-(The way to read this definition is that \code{Bool} is either
-\code{True} or \code{False}.) In principle, one should also be able
-to define a Boolean type in C++ as an enumeration:
+ (この定義の読み方は、\code{Bool}が\code{True}か\code{False}のどちらかであるということです。) 原則として、C++でも列挙型としてブール型を定義することが可能です: 
 
 \begin{snip}{cpp}
 enum bool {
@@ -413,55 +166,29 @@ enum bool {
     false
 };
 \end{snip}
-but C++ \code{enum} is secretly an integer. The C++11
-``\code{enum class}'' could have been used instead, but then you
-would have to qualify its values with the class name, as in
-\code{bool::true} and \code{bool::false}, not to mention having to
-include the appropriate header in every file that uses it.
+しかし、C++の\code{enum}は実は整数です。C++11の``\code{enum class}''を代わりに使用することができますが、その場合はその値をクラス名で修飾する必要があります。つまり、\code{bool::true}や\code{bool::false}といった形式で、それを使用するすべてのファイルに適切なヘッダを含める必要があります。
 
-Pure functions from \code{Bool} just pick two values from the target
-type, one corresponding to \code{True} and another to \code{False}.
+\code{Bool}からの純粋関数は、ターゲット型から、\code{True}に対応する1つの値と\code{False}に対応する別の1つの値を選びます。
 
-Functions to \code{Bool} are called \newterm{predicates}. For instance,
-the Haskell library \code{Data.Char} is full of predicates like
-\code{isAlpha} or \code{isDigit}. In C++ there is a similar library
-\code{} that defines, among others, \code{isalpha} and
-\code{isdigit}, but these return an \code{int} rather than a
-Boolean. The actual predicates are defined in \code{std::ctype} and
-have the form \code{ctype::is(alpha, c)}, \code{ctype::is(digit, c)}, etc.
+\code{Bool}への関数は\newterm{述語}と呼ばれます。例えば、Haskellライブラリ\code{Data.Char}は\code{isAlpha}や\code{isDigit}のような述語でいっぱいです。C++には\code{isalpha}や\code{isdigit}を定義する同様のライブラリがありますが、これらはBooleanではなく\code{int}を返します。実際の述語は\code{std::ctype}で定義され、\code{ctype::is(alpha, c)}、\code{ctype::is(digit, c)}などの形式を取ります。
 
-\section{Challenges}
+\section{チャレンジ}
 
 \begin{enumerate}
   \tightlist
   \item
-        Define a higher-order function (or a function object) \code{memoize}
-        in your favorite language. This function takes a pure function
-        \code{f} as an argument and returns a function that behaves almost
-        exactly like \code{f}, except that it only calls the original
-        function once for every argument, stores the result internally, and
-        subsequently returns this stored result every time it's called with
-        the same argument. You can tell the memoized function from the
-        original by watching its performance. For instance, try to memoize a
-        function that takes a long time to evaluate. You'll have to wait for
-        the result the first time you call it, but on subsequent calls, with
-        the same argument, you should get the result immediately.
+        お気に入りの言語で高階関数 (または関数オブジェクト) \code{memoize}を定義してください。この関数は純粋関数\code{f}を引数として取り、\code{f}とほとんど同じように振る舞う関数を返しますが、元の関数を各引数に対して一度だけ呼び出し、結果を内部に保存し、その後同じ引数で呼び出されるたびにこの保存された結果を返します。メモ化された関数は、そのパフォーマンスを見ることで元の関数と区別することができます。例えば、評価に長い時間がかかる関数をメモ化してみてください。最初にそれを呼び出したときは結果を待たなければなりませんが、同じ引数で後続の呼び出しでは、結果を即座に得るはずです。
   \item
-        Try to memoize a function from your standard library that you normally
-        use to produce random numbers. Does it work?
+        標準ライブラリのランダムな数を生成するために通常使用する関数をメモ化してみてください。うまくいきますか？
   \item
-        Most random number generators can be initialized with a seed.
-        Implement a function that takes a seed, calls the random number
-        generator with that seed, and returns the result. Memoize that
-        function. Does it work?
+        ほとんどのランダム数生成器はシードで初期化することができます。シードを取り、そのシードでランダム数生成器を呼び出し、結果を返す関数を実装してください。その関数をメモ化してください。うまくいきますか？
   \item
-        Which of these C++ functions are pure? Try to memoize them and observe
-        what happens when you call them multiple times: memoized and not.
+        以下のC++関数のどれが純粋ですか？それらをメモ化し、複数回呼び出したときに何が起こるかを観察してください: メモ化されたものとそうでないもの。
 
         \begin{enumerate}
           \tightlist
           \item
-                The factorial function from the example in the text.
+                本文中の例の階乗関数。
           \item
                 \begin{minted}{cpp}
 std::getchar()
@@ -483,11 +210,7 @@ int f(int x) {
 \end{minted}
         \end{enumerate}
   \item
-        How many different functions are there from \code{Bool} to
-        \code{Bool}? Can you implement them all?
+        \code{Bool}から\code{Bool}への異なる関数はいくつありますか？それらをすべて実装できますか？
   \item
-        Draw a picture of a category whose only objects are the types
-        \code{Void}, \code{()} (unit), and \code{Bool}; with arrows
-        corresponding to all possible functions between these types. Label the
-        arrows with the names of the functions.
+        対象が型\code{Void}、\code{()} (Unit) 、\code{Bool}のみである圏の図を描いてください。これらの型間のすべての可能な関数に対応する射で、そして関数の名前で射をラベル付けしてください。
 \end{enumerate}
