--- a/src/content/1.4/kleisli-categories.tex
+++ b/src/content/1.4/kleisli-categories.tex
@@ -1,11 +1,6 @@
 % !TEX root = ../../ctfp-print.tex
 
-\lettrine[lhang=0.17]{Y}{ou've seen how to model} types and pure functions as a category. I also
-mentioned that there is a way to model side effects, or non-pure
-functions, in category theory. Let's have a look at one such example:
-functions that log or trace their execution. Something that, in an
-imperative language, would likely be implemented by mutating some global
-state, as in:
+\lettrine[lhang=0.17]{型}{と}純粋関数を圏としてモデル化する方法を見てきました。また、非純粋関数や副作用を圏論でモデル化する方法があることにも触れました。実行中にログやトレースを生成する関数の例を見てみましょう。このようなことは、命令型言語では、おそらく何らかのグローバル状態を変更することによって実装されるでしょう。例えば:
 
 \begin{snip}{cpp}
 string logger;
@@ -15,64 +10,41 @@ bool negate(bool b) {
     return !b;
 }
 \end{snip}
-You know that this is not a pure function, because its memoized version
-would fail to produce a log. This function has \newterm{side effects}.
+この関数が純粋ではないことは、メモ化されたバージョンがログを生成できないためです。この関数には副作用があります。
 
-In modern programming, we try to stay away from global mutable state as
-much as possible --- if only because of the complications of
-concurrency. And you would never put code like this in a library.
+現代のプログラミングでは、可能な限りグローバルな可変状態から遠ざかるようにします --- 特に並行処理の複雑さのためです。そして、このようなコードをライブラリに入れることはありません。
 
-Fortunately for us, it's possible to make this function pure. You just
-have to pass the log explicitly, in and out. Let's do that by adding a
-string argument, and pairing regular output with a string that contains
-the updated log:
+幸いなことに、この関数を純粋にすることは可能です。ログを明示的に渡すだけです。引数に文字列を追加し、通常の出力と更新されたログを含む文字列とをペアにしましょう:
 
 \begin{snip}{cpp}
 pair<bool, string> negate(bool b, string logger) {
     return make_pair(!b, logger + "Not so! ");
 }
 \end{snip}
-This function is pure, it has no side effects, it returns the same pair
-every time it's called with the same arguments, and it can be memoized
-if necessary. However, considering the cumulative nature of the log,
-you'd have to memoize all possible histories that can lead to a given
-call. There would be a separate memo entry for:
+この関数は純粋で、副作用がなく、同じ引数で呼ばれるたびに同じペアを返し、必要に応じてメモ化できます。しかし、ログの累積的な性質を考えると、与えられた呼び出しに至るまでのすべての可能な履歴をメモ化する必要があります。別々のメモエントリが必要になります:
 
 \begin{snip}{cpp}
 negate(true, "It was the best of times. ");
 \end{snip}
-and
+そして
 
 \begin{snip}{cpp}
 negate(true, "It was the worst of times. ");
 \end{snip}
-and so on.
+などがあります。
 
-It's also not a very good interface for a library function. The callers
-are free to ignore the string in the return type, so that's not a huge
-burden; but they are forced to pass a string as input, which might be
-inconvenient.
+これはまた、ライブラリ関数のインターフェースとしてあまり良くありません。呼び出し元は戻り値の文字列を無視することができますが、入力として文字列を渡すことを強制されます。これは不便かもしれません。
 
-Is there a way to do the same thing less intrusively? Is there a way to
-separate concerns? In this simple example, the main purpose of the
-function \code{negate} is to turn one Boolean into another. The
-logging is secondary. Granted, the message that is logged is specific to
-the function, but the task of aggregating the messages into one
-continuous log is a separate concern. We still want the function to
-produce a string, but we'd like to unburden it from producing a log. So
-here's the compromise solution:
+もっと侵入的でない方法で同じことをする方法はありませんか？関心の分離はできませんか？この単純な例では、関数\code{negate}の主な目的は、あるブール値を別のブール値に変換することです。ログは二次的なものです。確かに、記録されるメッセージは関数に特有のものですが、メッセージを一つの連続したログに集約するタスクは別の問題です。私たちはまだ関数が文字列を生成することを望んでいますが、ログの生成からはそれを解放したいと思います。そこで妥協案です:
 
 \begin{snip}{cpp}
 pair<bool, string> negate(bool b) {
     return make_pair(!b, "Not so! ");
 }
 \end{snip}
-The idea is that the log will be aggregated \emph{between} function
-calls.
+アイディアは、ログが関数呼び出しの間に集約されるというものです。
 
-To see how this can be done, let's switch to a slightly more realistic
-example. We have one function from string to string that turns lower
-case characters to upper case:
+これをどのように実行するかを見るために、もう少し現実的な例に切り替えましょう。文字列から文字列への関数が一つあり、小文字を大文字に変換します:
 
 \begin{snip}{cpp}
 string toUpper(string s) {
@@ -82,15 +54,14 @@ string toUpper(string s) {
     return result;
 }
 \end{snip}
-and another that splits a string into a vector of strings, breaking it
-on whitespace boundaries:
+そして、文字列を空白の境界で文字列のベクトルに分割する別の関数があります:
 
 \begin{snip}{cpp}
 vector<string> toWords(string s) {
     return words(s);
 }
 \end{snip}
-The actual work is done in the auxiliary function \code{words}:
+実際の作業は補助関数\code{words}で行われます:
 
 \begin{snip}{cpp}
 vector<string> words(string s) {
@@ -105,25 +76,20 @@ vector<string> words(string s) {
     return result;
 }
 \end{snip}
-We want to modify the functions \code{toUpper} and \code{toWords} so
-that they piggyback a message string on top of their regular return
-values.
+私たちは関数\code{toUpper}と\code{toWords}を変更して、それらが通常の戻り値の上にメッセージ文字列を載せるようにしたいと思っています。
 
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.3\textwidth]{images/piggyback.jpg}
 \end{figure}
 \noindent
-We will ``embellish'' the return values of these functions. Let's do it
-in a generic way by defining a template \code{Writer} that
-encapsulates a pair whose first component is a value of arbitrary type
-\code{A} and the second component is a string:
+これらの関数の戻り値を「飾る」ために、任意の型\code{A}の値と文字列のペアをカプセル化するテンプレート\code{Writer}を定義することによって、一般的な方法で行います:
 
 \begin{snip}{cpp}
 template<class A>
 using Writer = pair<A, string>;
 \end{snip}
-Here are the embellished functions:
+ここに飾られた関数があります:
 
 \begin{snip}{cpp}
 Writer<string> toUpper(string s) {
@@ -137,9 +103,7 @@ Writer<vector<string>> toWords(string s) {
     return make_pair(words(s), "toWords ");
 }
 \end{snip}
-We want to compose these two functions into another embellished function
-that uppercases a string and splits it into words, all the while
-producing a log of those actions. Here's how we may do it:
+これらの二つの関数を、文字列を大文字に変換し、単語に分割し、その行動のログを生成する別の飾られた関数に合成したいと思っています。それを行う方法はこうです:
 
 \begin{snip}{cpp}
 Writer<vector<string>> process(string s) {
@@ -148,51 +112,29 @@ Writer<vector<string>> process(string s) {
     return make_pair(p2.first, p1.second + p2.second);
 }
 \end{snip}
-We have accomplished our goal: The aggregation of the log is no longer
-the concern of the individual functions. They produce their own
-messages, which are then, externally, concatenated into a larger log.
+目標を達成しました: ログの集約はもはや個々の関数の懸念事項ではありません。それらは自分自身のメッセージを生成し、それから外部的に大きなログに連結されます。
 
-Now imagine a whole program written in this style. It's a nightmare of
-repetitive, error-prone code. But we are programmers. We know how to
-deal with repetitive code: we abstract it! This is, however, not your
-run of the mill abstraction --- we have to abstract \newterm{function
-  composition} itself. But composition is the essence of category theory,
-so before we write more code, let's analyze the problem from the
-categorical point of view.
+こうして書かれた全プログラムを想像してみてください。これは繰り返し、間違いやすいコードの悪夢です。しかし、私たちはプログラマーです。繰り返しコードをどう扱うか知っています: それを抽象化します！ただし、これはごく普通の抽象化ではありません --- 関数合成自体を抽象化する必要があります。しかし、合成は圏論の本質ですので、もっとコードを書く前に、問題を圏論的な視点から分析しましょう。
 
-\section{The Writer Category}
+\section{Writer圏}
 
-The idea of embellishing the return types of a bunch of functions in
-order to piggyback some additional functionality turns out to be very
-fruitful. We'll see many more examples of it. The starting point is our
-regular category of types and functions. We'll leave the types as
-objects, but redefine our morphisms to be the embellished functions.
+関数の戻り値を飾ることで、何らかの追加機能を背負わせるというアイデアは非常に有益です。これに関する多くの例を見ることになるでしょう。出発点は私たちの通常の型と関数の圏です。型を対象として残しますが、飾られた関数をもつ射に再定義します。
 
-For instance, suppose that we want to embellish the function
-\code{isEven} that goes from \code{int} to \code{bool}. We turn it
-into a morphism that is represented by an embellished function. The
-important point is that this morphism is still considered an arrow
-between the objects \code{int} and \code{bool}, even though the
-embellished function returns a pair:
+例えば、\code{int}から\code{bool}への関数\code{isEven}を飾りたいとします。それを、ペアを返す飾られた関数で表現される射に変えます。重要な点は、この射がまだ\code{int}と\code{bool}の対象間の射と見なされることですが、飾られた関数がペアを返します:
 
 \begin{snip}{cpp}
 pair<bool, string> isEven(int n) {
     return make_pair(n % 2 == 0, "isEven ");
 }
 \end{snip}
-By the laws of a category, we should be able to compose this morphism
-with another morphism that goes from the object \code{bool} to
-whatever. In particular, we should be able to compose it with our
-earlier \code{negate}:
+圏の規則によれば、私たちはこの射を、\code{bool}の対象から何らかのものへの別の射と合成することができるはずです。特に、以前の\code{negate}と合成することができるはずです:
 
 \begin{snip}{cpp}
 pair<bool, string> negate(bool b) {
     return make_pair(!b, "Not so! ");
 }
 \end{snip}
-Obviously, we cannot compose these two morphisms the same way we compose
-regular functions, because of the input/output mismatch. Their
-composition should look more like this:
+明らかに、これら二つの射を通常の関数のように合成することはできません。なぜなら、入出力の不一致のためです。その合成は次のようになるはずです:
 
 \begin{snip}{cpp}
 pair<bool, string> isOdd(int n) {
@@ -201,29 +143,21 @@ pair<bool, string> isOdd(int n) {
     return make_pair(p2.first, p1.second + p2.second);
 }
 \end{snip}
-So here's the recipe for the composition of two morphisms in this new
-category we are constructing:
+そこで、この新しい圏での二つの射の合成のレシピです: 
 
 \begin{enumerate}
   \tightlist
   \item
-        Execute the embellished function corresponding to the first morphism
+        最初の射に対応する飾られた関数を実行する
   \item
-        Extract the first component of the result pair and pass it to the
-        embellished function corresponding to the second morphism
+        結果ペアの最初のコンポーネントを抽出し、それを第二の射に対応する飾られた関数に渡す
   \item
-        Concatenate the second component (the string) of the first result
-        and the second component (the string) of the second result
+        最初の結果の二番目のコンポーネント (文字列) と、第二の結果の二番目のコンポーネント (文字列) を連結する
   \item
-        Return a new pair combining the first component of the final result
-        with the concatenated string.
+        最終結果の最初のコンポーネントと連結された文字列を組み合わせた新しいペアを返す
 \end{enumerate}
 
-If we want to abstract this composition as a higher order function in
-C++, we have to use a template parameterized by three types
-corresponding to three objects in our category. It should take two
-embellished functions that are composable according to our rules, and
-return a third embellished function:
+C++でこの合成を高階関数として抽象化したい場合、私たちは、私たちの圏の3つの対象に対応する3つの型でパラメータ化されたテンプレートを使わなければなりません。それは、私たちの規則に従って合成可能な二つの飾られた関数を取り、第三の飾られた関数を返します:
 
 \begin{snip}{cpp}
 template<class A, class B, class C>
@@ -237,18 +171,14 @@ function<Writer<C>(A)> compose(function<Writer<B>(A)> m1,
     };
 }
 \end{snip}
-Now we can go back to our earlier example and implement the composition
-of \code{toUpper} and \code{toWords} using this new template:
+これで、以前の例に戻って、この新しいテンプレートを使って\code{toUpper}と\code{toWords}の合成を実装できます。
 
 \begin{snip}{cpp}
 Writer<vector<string>> process(string s) { 
     return compose<string, string, vector<string>>(toUpper, toWords)(s);
 }
 \end{snip}
-There is still a lot of noise with the passing of types to the
-\code{compose} template. This can be avoided as long as you have a
-C++14-compliant compiler that supports generalized lambda functions with
-return type deduction (credit for this code goes to Eric Niebler):
+型の渡しに関するノイズはまだ多いです。しかし、一般化されたラムダ関数と戻り型の推論をサポートしているC++14準拠のコンパイラを使用していれば、これを回避できます (このコードのクレジットはEric Nieblerにあります) :
 
 \begin{snip}{cpp}
 auto const compose = [](auto m1, auto m2) { 
@@ -259,154 +189,78 @@ auto const compose = [](auto m1, auto m2) {
     };
 };
 \end{snip}
-In this new definition, the implementation of \code{process}
-simplifies to:
+この新しい定義では、\code{process}の実装が簡単になります:
 
 \begin{snip}{cpp}
 Writer<vector<string>> process(string s) {
     return compose(toUpper, toWords)(s);
 }
 \end{snip}
-But we are not finished yet. We have defined composition in our new
-category, but what are the identity morphisms? These are not our regular
-identity functions! They have to be morphisms from type A back to type
-A, which means they are embellished functions of the form:
+しかし、まだ終わっていません。私たちは新しい圏での合成を定義しましたが、恒等射は何でしょうか？これらは通常の恒等関数ではありません！それらは型Aから型Aへ戻る射であり、それは以下の形式の飾られた関数です:
 
 \begin{snip}{cpp}
 Writer<A> identity(A);
 \end{snip}
-They have to behave like units with respect to composition. If you look
-at our definition of composition, you'll see that an identity morphism
-should pass its argument without change, and only contribute an empty
-string to the log:
+それらは合成に関して単位要素として振る舞う必要があります。合成の定義を見ると、恒等射は引数を変更せずに渡し、ログに空文字列を追加するだけでなければならないことがわかります:
 
 \begin{snip}{cpp}
 template<class A> Writer<A> identity(A x) {
     return make_pair(x, "");
 }
 \end{snip}
-You can easily convince yourself that the category we have just defined
-is indeed a legitimate category. In particular, our composition is
-trivially associative. If you follow what's happening with the first
-component of each pair, it's just a regular function composition, which
-is associative. The second components are being concatenated, and
-concatenation is also associative.
+この新しく定義された圏が確かに正当な圏であることを簡単に確認できます。特に、私たちの合成は自明に結合的です。各ペアの最初のコンポーネントで何が起こっているかを追えば、それはただの通常の関数合成であり、それは結合的です。二番目のコンポーネントは連結されており、連結もまた結合的です。
 
-An astute reader may notice that it would be easy to generalize this
-construction to any monoid, not just the string monoid. We would use
-\code{mappend} inside \code{compose} and \code{mempty} inside
-\code{identity} (in place of \code{+} and \code{""}). There really
-is no reason to limit ourselves to logging just strings. A good library
-writer should be able to identify the bare minimum of constraints that
-make the library work --- here the logging library's only requirement is
-that the log have monoidal properties.
+洞察力のある読者は、この構造を文字列モノイドだけでなく、任意のモノイドに一般化するのは簡単だと気づくかもしれません。\code{compose}内で\code{mappend}を使用し、\code{identity}内で\code{mempty}を使用します (\code{+}と\code{""}の代わりに) 。ログに文字列のみを使用することに制限する理由は実際にはありません。良いライブラリの作者は、ライブラリが機能するために必要な最小限の制約を特定できるはずです --- ここでは、ログライブラリの唯一の要件は、ログがモノイダルな特性を持つことです。
 
-\section{Writer in Haskell}
+\section{HaskellでのWriter}
 
-The same thing in Haskell is a little more terse, and we also get a lot
-more help from the compiler. Let's start by defining the \code{Writer}
-type:
+Haskellでの同じことは少し簡潔であり、コンパイラからも多くの助けを得られます。まず\code{Writer}型を定義しましょう:
 
 \src{snippet01}
-Here I'm just defining a type alias, an equivalent of a \code{typedef}
-(or \code{using}) in C++. The type \code{Writer} is parameterized by
-a type variable \code{a} and is equivalent to a pair of \code{a} and
-\code{String}. The syntax for pairs is minimal: just two items in
-parentheses, separated by a comma.
+ここで私は単なる型エイリアスを定義しています。これはC++の\code{typedef} (または\code{using}) と同等です。\code{Writer}型は型変数\code{a}によってパラメータ化されており、\code{a}と\code{String}のペアに相当します。ペアの構文は最小限です: ただ二つのアイテムをカンマで区切って括弧に入れるだけです。
 
-Our morphisms are functions from an arbitrary type to some
-\code{Writer} type:
+私たちの射は任意の型からある\code{Writer}型への関数です:
 
 \src{snippet02}
-We'll declare the composition as a funny infix operator, sometimes
-called the ``fish'':
+合成は時々「魚」と呼ばれる面白い中置演算子として宣言します:
 
 \src{snippet03}
-It's a function of two arguments, each being a function on its own, and
-returning a function. The first argument is of the type
-\code{(a -> Writer b)}, the second is
-\code{(b -> Writer c)}, and the result is
-\code{(a -> Writer c)}.
+これはそれぞれが独自の関数である二つの引数の関数です。そして、関数を返します。最初の引数は\code{(a -> Writer b)}型で、二番目は\code{(b -> Writer c)}型であり、結果は\code{(a -> Writer c)}型です。
 
-Here's the definition of this infix operator --- the two arguments
-\code{m1} and \code{m2} appearing on either side of the fishy
-symbol:
+ここにその中置演算子の定義があります --- 二つの引数\code{m1}と\code{m2}は魚のシンボルの両側に現れます:
 
 \src{snippet04}
-The result is a lambda function of one argument \code{x}. The lambda
-is written as a backslash --- think of it as the Greek letter $\lambda$ with an
-amputated leg.
+結果は一つの引数\code{x}のラムダ関数です。ラムダはバックスラッシュで書かれています --- これは、足を切断されたギリシャ文字の$\lambda$と考えてください。
 
-The \code{let} expression lets you declare auxiliary variables. Here
-the result of the call to \code{m1} is pattern matched to a pair of
-variables \code{(y, s1)}; and the result of the call to \code{m2},
-with the argument \code{y} from the first pattern, is matched to
-\code{(z, s2)}.
+\code{let}式を使うと、補助変数を宣言できます。ここでは、\code{m1}への呼び出しの結果が変数のペア\code{(y, s1)}にパターンマッチされ、最初のパターンからの引数\code{y}での\code{m2}への呼び出しの結果が\code{(z, s2)}
 
-It is common in Haskell to pattern match pairs, rather than use
-accessors, as we did in C++. Other than that there is a pretty
-straightforward correspondence between the two implementations.
+にマッチされます。
 
-The overall value of the \code{let} expression is specified in its
-\code{in} clause: here it's a pair whose first component is \code{z}
-and the second component is the concatenation of two strings,
-\code{s1++s2}.
+Haskellでは、ペアに対するパターンマッチを行うことが一般的です。C++でアクセッサを使用した場合のようには行いません。それ以外には、二つの実装間にかなり直接的な対応関係があります。
 
-I will also define the identity morphism for our category, but for
-reasons that will become clear much later, I will call it
-\code{return}.
+\code{let}式の全体的な値は、その\code{in}節で指定されます。ここでは、それは\code{z}の最初のコンポーネントと二つの文字列の連結\code{s1++s2}の二番目のコンポーネントのペアです。
+
+私たちの圏のための恒等射も定義しますが、後で明らかになる理由から、それを\code{return}と呼びます。
 
 \src{snippet05}
-For completeness, let's have the Haskell versions of the embellished
-functions \code{upCase} and \code{toWords}:
+完全性のために、飾られた関数\code{upCase}と\code{toWords}のHaskellバージョンを持ちましょう:
 
 \src{snippet06}
-The function \code{map} corresponds to the C++ \code{transform}. It
-applies the character function \code{toUpper} to the string
-\code{s}. The auxiliary function \code{words} is defined in the
-standard Prelude library.
+関数\code{map}はC++の\code{transform}に相当します。それは文字関数\code{toUpper}を文字列\code{s}に適用します。補助関数\code{words}は標準のPreludeライブラリで定義されています。
 
-Finally, the composition of the two functions is accomplished with the
-help of the fish operator:
+最後に、二つの関数の合成は魚演算子の助けを借りて達成されます:
 
 \src{snippet07}
 
-\section{Kleisli Categories}
+\section{Kleisli圏}
 
-You might have guessed that I haven't invented this category on the
-spot. It's an example of the so called Kleisli category --- a category
-based on a monad. We are not ready to discuss monads yet, but I wanted
-to give you a taste of what they can do. For our limited purposes, a
-Kleisli category has, as objects, the types of the underlying
-programming language. Morphisms from type $A$ to type $B$ are functions that
-go from $A$ to a type derived from $B$ using the particular embellishment.
-Each Kleisli category defines its own way of composing such morphisms,
-as well as the identity morphisms with respect to that composition.
-(Later we'll see that the imprecise term ``embellishment'' corresponds
-to the notion of an endofunctor in a category.)
+私がこの圏をその場で発明したわけではないと推測したかもしれません。これは、モナドに基づくいわゆるKleisli圏の一例です。私たちはまだモナドについて議論する準備ができていませんが、それらが何を達成できるかの一端をお見せしたかったのです。私たちの限られた目的のために、Kleisli圏は、基礎となるプログラミング言語の型を対象として持ちます。型$A$から型$B$への射は、特定の装飾を使用して$B$から派生した型への関数です。各Kleisli圏は、そのような射の合成方法と、その合成に関しての恒等射を定義します。 (後に見るように、「装飾」という漠然とした用語は、圏内の自己関手の概念に対応します。) 
 
-The particular monad that I used as the basis of the category in this
-chapter is called the \newterm{writer monad} and it's used for logging or
-tracing the execution of functions. It's also an example of a more
-general mechanism for embedding effects in pure computations. You've
-seen previously that we could model programming-language types and
-functions in the category of sets (disregarding bottoms, as usual). Here
-we have extended this model to a slightly different category, a category
-where morphisms are represented by embellished functions, and their
-composition does more than just pass the output of one function to the
-input of another. We have one more degree of freedom to play with: the
-composition itself. It turns out that this is exactly the degree of
-freedom which makes it possible to give simple denotational semantics to
-programs that in imperative languages are traditionally implemented
-using side effects.
+この章で使用した特定のモナドは、\newterm{writerモナド}と呼ばれ、関数の実行をロギングまたはトレースするために使用されます。これはまた、純粋な計算に効果を埋め込むためのより一般的なメカニズムの例でもあります。以前に見たように、我々はプログラミング言語の型と関数を (通常のように底を無視して) 集合の圏でモデル化することができました。ここでは、射が飾られた関数によって表され、それらの合成がただ一つの関数の出力を別の関数の入力に渡す以上のことを行う、少し異なる圏へとこのモデルを拡張しました。合成自体で遊ぶことができる自由度がもう一つあります。それはちょうど、副作用を使って命令型言語で伝統的に実装されているプログラムに単純な表示的意味論を与えることができる自由度です。
 
-\section{Challenge}
+\section{チャレンジ}
 
-A function that is not defined for all possible values of its argument
-is called a partial function. It's not really a function in the
-mathematical sense, so it doesn't fit the standard categorical mold. It
-can, however, be represented by a function that returns an embellished
-type \code{optional}:
+引数のすべての可能な値に対して定義されていない関数は、部分関数と呼ばれます。それは数学的な意味での本当の関数ではないので、標準的な圏論的型には当てはまりません。しかし、それは\code{optional}という装飾された型を返す関数によって表現することができます:
 
 \begin{snip}{cpp}
 template<class A> class optional {
@@ -419,8 +273,7 @@ public:
     A value() const { return _value; }
 };
 \end{snip}
-For example, here's the implementation of the embellished function
-\code{safe\_root}:
+例えば、次のような\code{safe\_root}関数の実装があります:
 
 \begin{snip}{cpp}
 optional<double> safe_root(double x) {
@@ -428,19 +281,14 @@ optional<double> safe_root(double x) {
     else return optional<double>{};
 }
 \end{snip}
-Here's the challenge:
+ここで、チャレンジです:
 
 \begin{enumerate}
   \tightlist
   \item
-        Construct the Kleisli category for partial functions (define
-        composition and identity).
+        部分関数のためのKleisli圏を構成します (合成と恒等射を定義します) 。
   \item
-        Implement the embellished function \code{safe\_reciprocal} that
-        returns a valid reciprocal of its argument, if it's different from
-        zero.
+        それがゼロでない場合にその引数の有効な逆数を返す、飾られた関数\code{safe\_reciprocal}を実装します。
   \item
-        Compose the functions \code{safe\_root} and \code{safe\_reciprocal} to implement
-        \code{safe\_root\_reciprocal} that calculates \code{sqrt(1/x)}
-        whenever possible.
+        関数\code{safe\_root}と\code{safe\_reciprocal}を合成して、可能であれば\code{sqrt(1/x)}を計算する\code{safe\_root\_reciprocal}を実装します。
 \end{enumerate}
