--- a/src/content/3.4/monads-programmers-definition.tex
+++ b/src/content/3.4/monads-programmers-definition.tex
@@ -1,58 +1,33 @@
 % !TEX root = ../../ctfp-print.tex
 
-\lettrine[lhang=0.17]{P}{rogrammers have developed} a whole mythology around monads. It's
-supposed to be one of the most abstract and difficult concepts in
-programming. There are people who ``get it'' and those who don't. For
-many, the moment when they understand the concept of the monad is like a
-mystical experience. The monad abstracts the essence of so many diverse
-constructions that we simply don't have a good analogy for it in
-everyday life. We are reduced to groping in the dark, like those blind
-men touching different parts of the elephant end exclaiming
-triumphantly: ``It's a rope,'' ``It's a tree trunk,'' or ``It's a
-burrito!''
+\lettrine[lhang=0.17]{プ}{ログラマ}はモナドについて様々な神話を作り上げています。それはプログラミングにおいて最も抽象的で難解な概念の一つとされています。それを「理解する」人とそうでない人がいます。多くの人にとって、モナドの概念を理解する瞬間は神秘的な体験のようなものです。モナドは多岐にわたる構造の本質を抽象化しているため、日常生活においてそれに相当する良い類似物がありません。私たちは暗闇の中を手探りで進むようなもので、盲目の人が象の異なる部分を触りながら勝ち誇って「これは綱だ」「これは木の幹だ」あるいは「これはブリトーだ」と叫ぶようなものです。
 
-Let me set the record straight: The whole mysticism around the monad is
-the result of a misunderstanding. The monad is a very simple concept.
-It's the diversity of applications of the monad that causes the
-confusion.
+ここで真実を明らかにしましょう: モナドを取り巻く全ての神秘性は誤解から生まれています。モナドは非常にシンプルな概念です。混乱を招くのはモナドの応用の多様性です。
 
-As part of research for this post I looked up duct tape (a.k.a., duck
-tape) and its applications. Here's a little sample of things that you
-can do with it:
+この投稿のための研究の一環として、ダクトテープ (いわゆるダックテープ) とその応用を調べました。これがいくつかの例です: 
 
 \begin{itemize}
   \tightlist
   \item
-        sealing ducts
+        ダクトの封印
   \item
-        fixing CO\textsubscript{2} scrubbers on board Apollo 13
+        アポロ13号のCO\textsubscript{2}スクラバーの修理
   \item
-        wart treatment
+        イボ治療
   \item
-        fixing Apple's iPhone 4 dropped call issue
+        AppleのiPhone 4の通話落ち問題の修正
   \item
-        making a prom dress
+        プロムドレスの製作
   \item
-        building a suspension bridge
+        吊り橋の建設
 \end{itemize}
 
 \noindent
-Now imagine that you didn't know what duct tape was and you were trying
-to figure it out based on this list. Good luck!
+さて、ダクトテープが何かを知らないとして、このリストを基にそれを理解しようとしてください。幸運を祈ります！
 
-So I'd like to add one more item to the collection of ``the monad is
-like\ldots{}'' clichés: The monad is like duct tape. Its applications
-are widely diverse, but its principle is very simple: it glues things
-together. More precisely, it composes things.
+そこで、私が追加したいのは「モナドは\ldots{}のようなもの」という陳腐な比喩のコレクションにもう一つアイテムを加えることです: モナドはダクトテープのようなものです。その応用は非常に多様ですが、その原理は非常にシンプルです: それは物事を結びつけます。より正確には、物事を合成します。
 
-This partially explains the difficulties a lot of programmers,
-especially those coming from the imperative background, have with
-understanding the monad. The problem is that we are not used to thinking
-of programming in terms of function composition. This is understandable.
-We often give names to intermediate values rather than pass them
-directly from function to function. We also inline short segments of
-glue code rather than abstract them into helper functions. Here's an
-imperative-style implementation of the vector-length function in C:
+これは、特に手続き型の背景から来たプログラマがモナドを理解するのに苦労する理由を部分的に説明しています。問題は、私たちが関数合成という観点でプログラミングを考えることに慣れていないことです。これは理解しやすいことです。私たちはしばしば中間値に名前を付けるか、それらを直接関数から関数へと渡すのではなく、短い接着コードのセグメントをインライン化するか、補助関数に抽象化することを避けます。ここにCでのベクトル長関数の手続き型スタイルの実装があります: 
 
 \begin{snip}{cpp}
 double vlen(double * v) {
@@ -63,264 +38,137 @@ double vlen(double * v) {
     return sqrt(d);
 }
 \end{snip}
-Compare this with the (stylized) Haskell version that makes function
-composition explicit:
+これを関数合成を明示する (スタイリッシュな) Haskellのバージョンと比較してみてください: 
 
 \src{snippet01}
-(Here, to make things even more cryptic, I partially applied the
-exponentiation operator \code{(\^{})} by setting its second argument
-to \code{2}.)
+ (ここで、より神秘的にするために、私は累乗演算子\code{(\^{})}をその第二引数に\code{2}を設定して部分適用しました。) 
 
-I'm not arguing that Haskell's point-free style is always better, just
-that function composition is at the bottom of everything we do in
-programming. And even though we are effectively composing functions,
-Haskell does go to great lengths to provide imperative-style syntax
-called the \code{do} notation for monadic composition. We'll see its
-use later. But first, let me explain why we need monadic composition in
-the first place.
+私はHaskellのポイントフリースタイルが常に優れていると主張しているわけではありませんが、プログラミングにおいて私たちが行う全てのことの底には関数合成があります。そして、実際には関数を合成しているにも関わらず、Haskellはモナド的な合成のための手続き型スタイルの構文である\code{do}表記を提供しています。後ほどその使用方法を見ていきますが、まず、なぜそもそもモナド的な合成が必要なのかを説明しましょう。
 
-\section{The Kleisli Category}
+\section{Kleisli圏}
 
-We have previously arrived at the
-\hyperref[kleisli-categories]{writer
-  monad} by embellishing regular functions. The particular embellishment
-was done by pairing their return values with strings or, more generally,
-with elements of a monoid. We can now recognize that such an embellishment
-is a functor:
+以前、我々は通常の関数に装飾を施すことによって
+\hyperref[kleisli-categories]{Writerモナド}
+に到達しました。特にその装飾は、それらの戻り値を文字列とペアにすること、あるいは一般にモノイドの要素とペアにすることによって行われました。我々は今、そのような装飾が関手であることを認識できます: 
 
 \src{snippet02}
-We have subsequently found a way of composing embellished functions, or
-Kleisli arrows, which are functions of the form:
+その後、我々は装飾された関数、またはKleisli射の合成方法を見つけました。それらは形式としては以下のような関数です: 
 
 \src{snippet03}
-It was inside the composition that we implemented the accumulation of
-the log.
+ログの蓄積は合成の内部で実装されました。
 
-We are now ready for a more general definition of the Kleisli category.
-We start with a category $\cat{C}$ and an endofunctor $m$. The
-corresponding Kleisli category $\cat{K}$ has the same objects as
-$\cat{C}$, but its morphisms are different. A morphism between two
-objects $a$ and $b$ in $\cat{K}$ is implemented as a
-morphism:
+我々は今、Kleisli圏のより一般的な定義に備えています。我々は圏$\cat{C}$と自己関手$m$から始めます。対応するKleisli圏$\cat{K}$は$\cat{C}$と同じ対象を持ちますが、その射は異なります。$\cat{K}$内の二つの対象$a$と$b$の間の射は、元の圏$\cat{C}$内での射として実装されます: 
 \[a \to m\ b\]
-in the original category $\cat{C}$. It's important to keep in mind that
-we treat a Kleisli arrow in $\cat{K}$ as a morphism between $a$
-and $b$, and not between $a$ and $m\ b$.
+$a$と$b$の間の$\cat{K}$内のKleisli射を、$a$と$m\ b$の間ではなく射として扱うことが重要です。
 
-In our example, $m$ was specialized to \code{Writer w}, for
-some fixed monoid \code{w}.
+私たちの例では、$m$は\code{Writer w}に特化されましたが、
+ある固定されたモノイド\code{w}のためです。
 
-Kleisli arrows form a category only if we can define proper composition
-for them. If there is a composition, which is associative and has an
-identity arrow for every object, then the functor $m$ is called a
-\newterm{monad}, and the resulting category is called the Kleisli category.
+Kleisli射は、それらに適切な合成を定義できる場合に限り、圏を形成します。合成が存在し、それが結合的であり、すべての対象に対する恒等射がある場合、関手$m$はモナドと呼ばれ、結果として得られる圏はKleisli圏と呼ばれます。
 
-In Haskell, Kleisli composition is defined using the fish operator
-\code{>=>}, and the identity arrow is a
-polymorphic function called \code{return}. Here's the definition of a
-monad using Kleisli composition:
+Haskellでは、Kleisli合成は魚演算子\code{>=>}を使用して定義され、恒等射は\code{return}と呼ばれる多相的関数です。ここにモナドの定義があります: 
 
 \src{snippet04}
-Keep in mind that there are many equivalent ways of defining a monad,
-and that this is not the primary one in the Haskell ecosystem. I like it
-for its conceptual simplicity and the intuition it provides, but there
-are other definitions that are more convenient when programming. We'll
-talk about them momentarily.
+多くの同等のモナドの定義が存在し、これがHaskellのエコシステムでの主要なものではないことを念頭に置いてください。私はその概念的なシンプルさと直感的理解のためにこれを好みますが、プログラミングする際には他の定義の方が便利なこともあります。間もなくそれについて話し合いましょう。
 
-In this formulation, monad laws are very easy to express. They cannot be
-enforced in Haskell, but they can be used for equational reasoning. They
-are simply the standard composition laws for the Kleisli category:
+この定式化では、モナド則は非常に簡単に表現できます。それらはHaskellで強制されることはありませんが、等式推論のために使用することができます。それらはKleisli圏のための標準的な合成則にすぎません: 
 
 \begin{snip}{haskell}
-(f >=> g) >=> h = f >=> (g >=> h) -- associativity
-return >=> f = f                  -- left unit
-f >=> return = f                  -- right unit
+(f >=> g) >=> h = f >=> (g >=> h) -- 結合則
+return >=> f = f                  -- 左単位則
+f >=> return = f                  -- 右単位則
 \end{snip}
-This kind of a definition also expresses what a monad really is: it's a
-way of composing embellished functions. It's not about side effects or
-state. It's about composition. As we'll see later, embellished functions
-may be used to express a variety of effects or state, but that's not
-what the monad is for. The monad is the sticky duct tape that ties one
-end of an embellished function to the other end of an embellished
-function.
+このような定義はまた、モナドが本当に何であるかを表現します: それは装飾された関数を合成する方法です。それは副作用や状態についてのものではありません。それは合成についてのものです。後ほど見るように、装飾された関数は様々な作用や状態を表現するために使用することができますが、それがモナドのためのものではありません。モナドは装飾された関数の一方の端を他方の端にくっつける粘着性のあるダクトテープです。
 
-Going back to our \code{Writer} example: The logging functions (the
-Kleisli arrows for the \code{Writer} functor) form a category because
-\code{Writer} is a monad:
+私たちの\code{Writer}例に戻ると、ログ関数 (\code{Writer}関手のKleisli射) は、\code{Writer}がモナドであるために圏を形成します: 
 
 \src{snippet05}
-Monad laws for \code{Writer w} are satisfied as long as monoid laws
-for \code{w} are satisfied (they can't be enforced in Haskell either).
+モナド則は\code{w}のモノイド則が満たされる限り\code{Writer w}に対して満たされます (それらもHaskellで強制されることはありません) 。
 
-There's a useful Kleisli arrow defined for the \code{Writer} monad
-called \code{tell}. It's sole purpose is to add its argument to the
-log:
+\code{Writer}モナドのために定義された便利なKleisli射があります。それは\code{tell}と呼ばれ、その唯一の目的はその引数をログに追加することです: 
 
 \src{snippet06}
-We'll use it later as a building block for other monadic functions.
+後ほど他のモナド的な関数の構成ブロックとしてそれを使用します。
 
-\section{Fish Anatomy}
+\section{魚の解剖学}
 
-When implementing the fish operator for different monads you quickly
-realize that a lot of code is repeated and can be easily factored out.
-To begin with, the Kleisli composition of two functions must return a
-function, so its implementation may as well start with a lambda taking
-an argument of type \code{a}:
+異なるモナドに対する魚演算子の実装を行うとすぐに、多くのコードが繰り返されることが分かり、簡単にまとめることができます。始めに、二つの関数のKleisli合成は関数を返す必要がありますので、その実装は型\code{a}の引数を取るラムダで始まるかもしれません: 
 
 \src{snippet07}
-The only thing we can do with this argument is to pass it to \code{f}:
+この引数でできる唯一のことは、それを\code{f}に渡すことです: 
 
 \src{snippet08}
-At this point we have to produce the result of type \code{m c},
-having at our disposal an object of type \code{m b} and a function
-\code{g :: b -> m c}. Let's define a function that
-does that for us. This function is called \emph{bind} and is usually written in
-the form of an infix operator:
+この時点で、私たちは型\code{m c}の結果を生成する必要がありますが、型\code{m b}のオブジェクトと関数\code{g :: b -> m c}が手元にあります。それを行うための関数を定義しましょう。この関数は\emph{bind}と呼ばれ、通常は中置演算子の形で書かれます: 
 
 \src{snippet09}
-For every monad, instead of defining the fish operator, we may instead
-define bind. In fact the standard Haskell definition of a monad uses
-bind:
+各モナドに対して魚演算子を定義する代わりに、bindを定義することもできます。実際、標準的なHaskellのモナドの定義はbindを使用しています: 
 
 \src{snippet10}
-Here's the definition of bind for the \code{Writer} monad:
+こちらは\code{Writer}モナドのためのbindの定義です: 
 
 \src{snippet11}
-It is indeed shorter than the definition of the fish operator.
+確かに魚演算子の定義よりも短いですね。
 
-It's possible to further dissect bind, taking advantage of the fact that
-\code{m} is a functor. We can use \code{fmap} to apply the function
-\code{a -> m b} to the contents of \code{m a}. This
-will turn \code{a} into \code{m b}. The result of the application
-is therefore of type \code{m (m b)}. This is not exactly what we
-want --- we need the result of type \code{m b} --- but we're close.
-All we need is a function that collapses or flattens the double
-application of \code{m}. Such a function is called \code{join}:
+さらに、\code{m}が関手であるという事実を利用してbindをさらに解体することができます。関数\code{a -> m b}を\code{m a}の内容に適用するために\code{fmap}を使用できます。これにより、\code{a}は\code{m b}に変わります。したがって、適用の結果は型\code{m (m b)}になります。これはまさに我々が求める結果型\code{m b}ではありませんが、近いです。必要なのは、\code{m}の二重適用を崩壊させるか平坦化する関数です。そのような関数は\code{join}と呼ばれます: 
 
 \src{snippet12}
-Using \code{join}, we can rewrite bind as:
+\code{join}を使って、bindを次のように書き換えることができます: 
 
 \src{snippet13}
-That leads us to the third option for defining a monad:
+これによりモナドを定義する第三の方法がもたらされます: 
 
 \src{snippet14}
-Here we have explicitly requested that \code{m} be a \code{Functor}.
-We didn't have to do that in the previous two definitions of the monad.
-That's because any type constructor \code{m} that either supports the
-fish or bind operator is automatically a functor. For instance, it's
-possible to define \code{fmap} in terms of bind and \code{return}:
+ここでは、\code{m}が\code{Functor}であることを明示的に要求しています。先の二つのモナドの定義ではそれを要求する必要はありませんでした。なぜなら、魚演算子またはbind演算子をサポートする任意の型コンストラクタ\code{m}は自動的に関手であるからです。例えば、bindと\code{return}を使って\code{fmap}を定義することが可能です: 
 
 \src{snippet15}
-For completeness, here's \code{join} for the \code{Writer} monad:
+完全性のために、\code{Writer}モナドのための\code{join}はこちらです: 
 
 \src{snippet16}
 
-\section{The \texttt{do} Notation}
+\section{\texttt{do}記法}
 
-One way of writing code using monads is to work with Kleisli arrows ---
-composing them using the fish operator. This mode of programming is the
-generalization of the point-free style. Point-free code is compact and
-often quite elegant. In general, though, it can be hard to understand,
-bordering on cryptic. That's why most programmers prefer to give names
-to function arguments and intermediate values.
+モナドを使ってコードを書く一つの方法は、Kleisli射を扱い、それらを魚演算子を使用して合成することです。このプログラミングスタイルは、ポイントフリースタイルの一般化です。ポイントフリーコードはコンパクトで、しばしば非常にエレガントです。しかし一般的には理解が難しく、暗号のようになりがちです。そのため、ほとんどのプログラマは関数引数と中間値に名前を付けることを好みます。
 
-When dealing with monads it means favoring the bind operator over the
-fish operator. Bind takes a monadic value and returns a monadic value.
-The programmer may choose to give names to those values. But that's
-hardly an improvement. What we really want is to pretend that we are
-dealing with regular values, not the monadic containers that encapsulate
-them. That's how imperative code works --- side effects, such as
-updating a global log, are mostly hidden from view. And that's what the
-\code{do} notation emulates in Haskell.
+モナドを扱う場合、これは魚演算子よりもbind演算子を好むことを意味します。bindはモナド的な値を取り、モナド的な値を返します。プログラマはそれらの値に名前を付けることを選択できます。しかし、それはほとんど改善とは言えません。我々が本当に欲しいのは、モナド的コンテナに封じ込められているものではなく、通常の値として扱われるふりをすることです。それが手続き型コードの動作方法です --- 副作用、たとえばグローバルログの更新などはほとんどが見えないものです。そしてそれは\code{do}記法がHaskellで模倣するものです。
 
-You might be wondering then, why use monads at all? If we want to make
-side effects invisible, why not stick to an imperative language? The
-answer is that the monad gives us much better control over side effects.
-For instance, the log in the \code{Writer} monad is passed from
-function to function and is never exposed globally. There is no
-possibility of garbling the log or creating a data race. Also, monadic
-code is clearly demarcated and cordoned off from the rest of the
-program.
+それでは、なぜ全ての副作用を見えなくするのであればモナドを全く使わないのでしょうか？なぜ手続き型言語に固執しないのでしょうか？答えは、モナドが副作用をより良く制御することを可能にするからです。例えば、\code{Writer}モナドのログは関数から関数へと渡され、決してグローバルに露出しません。ログを混乱させたり、データレースを生じさせる可能性はありません。また、モナド的コードは明確に区切られ、プログラムの残りの部分から隔離されています。
 
-The \code{do} notation is just syntactic sugar for monadic
-composition. On the surface, it looks a lot like imperative code, but it
-translates directly to a sequence of binds and lambda expressions.
+\code{do}記法はモナド的な合成のための単なるシンタックスシュガーです。表面上は手続き型コードのように見えますが、直接bindとラムダ式の連続に翻訳されます。
 
-For instance, take the example we used previously to illustrate the
-composition of Kleisli arrows in the \code{Writer} monad. Using our
-current definitions, it could be rewritten as:
+例えば、以前に\code{Writer}モナドのKleisli射の合成を説明するために使用した例を取り上げます。現在の定義を使用すると、これは次のように書き換えられます: 
 
 \src{snippet17}
-This function turns all characters in the input string to upper case and
-splits it into words, all the while producing a log of its actions.
+この関数は入力文字列の全ての文字を大文字に変換し、単語に分割し、その一方で行動のログを生成します。
 
-In the \code{do} notation it would look like this:
+\code{do}記法では次のようになります: 
 
 \src{snippet18}
-Here, \code{upStr} is just a \code{String}, even though
-\code{upCase} produces a \code{Writer}:
+ここで、\code{upStr}は単なる\code{String}ですが、\code{upCase}は\code{Writer}を生成します: 
 
 \src{snippet19}
-This is because the \code{do} block is desugared by the compiler to:
+これはコンパイラによって次のようにデシュガーされる\code{do}ブロックです: 
 
 \src{snippet20}
-The monadic result of \code{upCase} is bound to a lambda that takes a
-\code{String}. It's the name of this string that shows up in the
-\code{do} block. When reading the line:
+\code{upCase}のモナド的な結果は\code{String}を取るラムダに束縛されます。この文字列の名前が\code{do}ブロックに現れます。次の行を読むとき: 
 
 \src{snippet21}
-we say that \code{upStr} \emph{gets} the result of \code{upCase s}.
+私たちは\code{upStr}が\code{upCase s}の結果を「得る」と言います。
 
-The pseudo-imperative style is even more pronounced when we inline
-\code{toWords}. We replace it with the call to \code{tell}, which
-logs the string \code{"toWords "}, followed by the call to
-\code{return} with the result of splitting the string \code{upStr}
-using \code{words}. Notice that \code{words} is a regular function
-working on strings.
+\code{tell}をインライン化すると、擬似手続き型スタイルはさらに顕著になります。\code{toWords}を\code{"toWords "}という文字列をログに記録する\code{tell}の呼び出しで置き換え、\code{upStr}を分割する\code{words}の結果を\code{return}で返す呼び出しに続けます。\code{words}は文字列を扱う通常の関数です。
 
 \src{snippet22}
-Here, each line in the do block introduces a new nested bind in the
-desugared code:
+ここで、\code{do}ブロック内の各行は、デシュガーされたコード内の新しいネストされたbindを導入します: 
 
 \src{snippet23}
-Notice that \code{tell} produces a unit value, so it doesn't have to
-be passed to the following lambda. Ignoring the contents of a monadic
-result (but not its effect --- here, the contribution to the log) is
-quite common, so there is a special operator to replace bind in that
-case:
+\code{tell}はUnit値を生成するので、それを次のラムダに渡す必要はありません。モナド的な結果の内容を無視する (しかしその効果ではない --- ここではログへの貢献) ことはかなり一般的なので、その場合にbindを置き換える特別な演算子があります: 
 
 \src{snippet24}
-The actual desugaring of our code looks like this:
+私たちのコードの実際のデシュガーは次のようになります: 
 
 \src{snippet25}
-In general, \code{do} blocks consist of lines (or sub-blocks) that
-either use the left arrow to introduce new names that are then available
-in the rest of the code, or are executed purely for side-effects. Bind
-operators are implicit between the lines of code. Incidentally, it is
-possible, in Haskell, to replace the formatting in the \code{do}
-blocks with braces and semicolons. This provides the justification for
-describing the monad as a way of overloading the semicolon.
+一般的に、\code{do}ブロックはコードの残りの部分で利用可能になる新しい名前を導入する左射を使用する行 (またはサブブロック) 、または純粋に副作用のために実行される行で構成されます。行の間には暗黙のbind演算子があります。ちなみに、Haskellでは\code{do}ブロックの書式をブレースとセミコロンに置き換えることが可能です。これはモナドをセミコロンをオーバーロードする方法として説明する正当化を提供します。
 
-Notice that the nesting of lambdas and bind operators when desugaring
-the \code{do} notation has the effect of influencing the execution of
-the rest of the \code{do} block based on the result of each line. This
-property can be used to introduce complex control structures, for
-instance to simulate exceptions.
+\code{do}記法のデシュガーにおけるラムダとbind演算子のネスティングは、各行の結果に基づいて\code{do}ブロックの残りの実行を影響させる効果を持ちます。この性質は、例えば例外をシミュレートするためなど、複雑な制御構造を導入するために使用することができます。
 
-Interestingly, the equivalent of the \code{do} notation has found its
-application in imperative languages, C++ in particular. I'm talking
-about resumable functions or coroutines. It's not a secret that C++
-\urlref{https://bartoszmilewski.com/2014/02/26/c17-i-see-a-monad-in-your-future/}{futures
-  form a monad}. It's an example of the continuation monad, which we'll
-discuss shortly. The problem with continuations is that they are very
-hard to compose. In Haskell, we use the \code{do} notation to turn the
-spaghetti of ``my handler will call your handler'' into something that
-looks very much like sequential code. Resumable functions make the same
-transformation possible in C++. And the same mechanism can be applied to
-turn the
-\urlref{https://bartoszmilewski.com/2014/04/21/getting-lazy-with-c/}{spaghetti
-  of nested loops} into list comprehensions or ``generators,'' which are
-essentially the \code{do} notation for the list monad. Without the
-unifying abstraction of the monad, each of these problems is typically
-addressed by providing custom extensions to the language. In Haskell,
-this is all dealt with through libraries.
+興味深いことに、\code{do}記法の同等物は、特にC++で、手続き型言語に適用されています。私が言及しているのは再開可能関数やコルーチンです。C++の\urlref{https://bartoszmilewski.com/2014/02/26/c17-i-see-a-monad-in-your-future/}{futuresがモナドを形成する}ことは秘密ではありません。それは継続モナドの一例であり、私たちはまもなくそれについて議論します。継続は非常に合成しにくいという問題があります。Haskellでは\code{do}記法を使用して「私のハンドラーがあなたのハンドラーを呼び出します」のスパゲティを、非常に手続き型のようなものに変換します。再開可能関数はC++で同じ変換を可能にします。そして同じメカニズムは、\urlref{https://bartoszmilewski.com/2014/04/21/getting-lazy-with-c/}{入れ子になったループのスパゲティ}をリスト内包表記または「ジェネレーター」に変換するために適用されることがありますが、それらは本質的にリストモナドのための\code{do}記法です。モナドの一元化された抽象化がなければ、これらの問題は通常、言語へのカスタム拡張によって個別に対処されます。Haskellでは、これはすべてライブラリを通じて処理されます。
+
