--- a/src/content/3.6/monads-categorically.tex
+++ b/src/content/3.6/monads-categorically.tex
@@ -1,18 +1,10 @@
 % !TEX root = ../../ctfp-print.tex
 
-\lettrine[lhang=0.17]{I}{f you mention monads} to a programmer, you'll probably end up talking
-about effects. To a mathematician, monads are about algebras. We'll talk
-about algebras later --- they play an important role in programming ---
-but first I'd like to give you a little intuition about their relation
-to monads. For now, it's a bit of a hand-waving argument, but bear with
-me.
+\lettrine[lhang=0.17]{プ}{ログラマ}にモナドを話すと、作用について話すことになるかもしれませんが、数学者にとってモナドは代数についてです。後ほど代数について話します --- プログラミングにおいて重要な役割を果たします --- しかしまず、モナドとの関係について少し直感をお伝えしたいです。今は少し手を振るような議論ですが、お付き合いください。
 
-Algebra is about creating, manipulating, and evaluating expressions.
-Expressions are built using operators. Consider this simple expression:
+代数は、表現を作成し、操作し、評価することについてです。表現は演算子を使って構成されます。このシンプルな表現を考えてみてください: 
 \[x^2 + 2 x + 1\]
-This expression is formed using variables like $x$, and constants
-like $1$ or $2$, bound together with operators like plus or times. As
-programmers, we often think of expressions as trees.
+この表現は、変数$x$や定数$1$や$2$を、足し算や掛け算のような演算子で結びつけて構成されています。プログラマとしては、表現を木構造として考えることがよくあります。
 
 \begin{figure}[H]
   \centering
@@ -20,97 +12,50 @@ programmers, we often think of expressions as trees.
 \end{figure}
 
 \noindent
-Trees are containers so, more generally, an expression is a container
-for storing variables. In category theory, we represent containers as
-endofunctors. If we assign the type $a$ to the variable
-$x$, our expression will have the type $m\ a$, where
-$m$ is an endofunctor that builds expression trees. (Nontrivial
-branching expressions are usually created using recursively defined
-endofunctors.)
+木はコンテナなので、一般的には、表現は変数を格納するコンテナです。圏論では、コンテナを自己関手として表します。変数$x$に型$a$を割り当てると、私たちの表現は$m\ a$という型を持ちます。ここで$m$は、表現木を構成する自己関手です。(非自明な分岐表現は通常、再帰的に定義された自己関手を使用して作成されます。)
 
-What's the most common operation that can be performed on an expression?
-It's substitution: replacing variables with expressions. For instance,
-in our example, we could replace $X$ with $y - 1$ to
-get:
+表現に対して実行できる最も一般的な操作は何でしょうか？それは代入です: 変数を表現で置き換えることです。例えば、先ほどの例で、$X$を$y - 1$で置き換えると、以下のようになります: 
 \[(y - 1)^2 + 2 (y - 1) + 1\]
-Here's what happened: We took an expression of type $m\ a$ and
-applied a transformation of type $a \to m\ b$
-($b$ represents the type of $y$). The result is an
-expression of type $m\ b$. Let me spell it out:
+ここで何が起こったかというと、型$m\ a$の表現を取り、型$a \to m\ b$の変換 ($b$は$y$の型) を適用しました。結果は型$m\ b$の表現です。はっきりさせましょう: 
 \[m\ a \to (a \to m\ b) \to m\ b\]
-Yes, that's the signature of monadic bind.
+はい、これがモナド的な束縛のシグネチャです。
 
-That was a bit of motivation. Now let's get to the math of the monad.
-Mathematicians use different notation than programmers. They prefer to
-use the letter $T$ for the endofunctor, and Greek letters: $\mu$ for
-\code{join} and $\eta$ for \code{return}. Both \code{join} and
-\code{return} are polymorphic functions, so we can guess that they
-correspond to natural transformations.
+これは少し動機付けです。さあ、モナドの数学に取り組みましょう。数学者はプログラマよりも異なる記法を好むことがあります。彼らは自己関手には文字$T$を使用し、ギリシャ文字: $\mu$は\code{join}に、$\eta$は\code{return}に対応します。両方の\code{join}と\code{return}は多相的な関数なので、それらが自然変換に対応すると推測できます。
 
-Therefore, in category theory, a monad is defined as an endofunctor
-$T$ equipped with a pair of natural transformations $\mu$ and $\eta$.
+したがって、圏論では、モナドはペアの自然変換$\mu$と$\eta$を備えた自己関手$T$として定義されます。
 
-$\mu$ is a natural transformation from the square of the functor $T^2$
-back to $T$. The square is simply the functor composed with
-itself, $T \circ T$ (we can only do this kind of squaring for
-endofunctors).
+$\mu$は、関手$T^2$から$T$に戻る自然変換です。$T^2$は単に関手自体とその自体の組み合わせ、$T \circ T$です (この種の二乗は自己関手に対してのみ実行できます) 。
 \[\mu \Colon T^2 \to T\]
-The component of this natural transformation at an object $a$ is
-the morphism:
+この自然変換の対象$a$におけるコンポーネントは射です: 
 \[\mu_a \Colon T (T a) \to T a\]
-which, in $\Hask$, translates directly to our definition of
-\code{join}.
+これは$\Hask$では\code{join}の定義に直接翻訳されます。
 
-$\eta$ is a natural transformation between the identity functor $I$
-and $T$:
+$\eta$は、恒等関手$I$と$T$の間の自然変換です: 
 \[\eta \Colon I \to T\]
-Considering that the action of $I$ on the object $a$ is
-just $a$, the component of $\eta$ is given by the morphism:
+$I$の対象$a$に対する作用が単に$a$であることを考慮すると、$\eta$のコンポーネントは射によって与えられます: 
 \[\eta_a \Colon a \to T a\]
-which translates directly to our definition of \code{return}.
+これは\code{return}の定義に直接翻訳されます。
 
-These natural transformations must satisfy some additional laws. One way
-of looking at it is that these laws let us define a Kleisli category for
-the endofunctor $T$. Remember that a Kleisli arrow between
-$a$ and $b$ is defined as a morphism
-$a \to T b$. The composition of two such arrows
-(I'll write it as a circle with the subscript $T$) can be
-implemented using $\mu$:
+これらの自然変換はいくつかの追加の規則を満たさなければなりません。一つの見方は、これらの規則が私たちに自己関手$T$のためのKleisli圏を定義させることです。$a$と$b$の間のKleisli射は、射$a \to T b$として定義されます。2つのそのような射の合成 ($T$の下付き文字を持つ円として書きます) は$\mu$を使用して実装できます: 
 \[g \circ_T f = \mu_c \circ (T g) \circ f\]
-where
+ここで
 \begin{gather*}
   f \Colon a \to T b \\
   g \Colon b \to T c
 \end{gather*}
-Here $T$, being a functor, can be applied to the morphism
-$g$. It might be easier to recognize this formula in Haskell
-notation:
+ここで$T$は関手であり、射$g$に適用できます。この式をHaskell記法で認識するのが容易かもしれません: 
 
 \src{snippet01}
-or, in components:
+または、コンポーネントで: 
 
 \src{snippet02}
-In terms of the algebraic interpretation, we are just composing two
-successive substitutions.
+代数的な解釈では、私たちは単に2つの連続する代入を合成しているだけです。
 
-For Kleisli arrows to form a category we want their composition to be
-associative, and $\eta_a$ to be the identity Kleisli arrow at
-$a$. This requirement can be translated to monadic laws for $\mu$ and
-$\eta$. But there is another way of deriving these laws that makes them look
-more like monoid laws. In fact $\mu$ is often called
-\emph{multiplication}, and $\eta$ -- \emph{unit}.
+Kleisli射が圏を形成するためには、その合成が結合的であること、そして$\eta_a$が$a$での恒等Kleisli射であることが望まれます。この要件は、$\mu$と$\eta$のためのモナドの規則に翻訳することができます。しかし、これらの規則をよりモノイドの規則のように見せる別の方法で導出することもできます。実際$\mu$はしばしば\emph{乗算}と呼ばれ、$\eta$は\emph{単位}と呼ばれます。
 
-Roughly speaking, the associativity law states that the two ways of
-reducing the cube of $T$, $T^3$, down to $T$ must
-give the same result. Two unit laws (left and right) state that when
-$\eta$ is applied to $T$ and then reduced by $\mu$, we
-get back $T$.
+大まかに言えば、結合則は$T$の立方体、$T^3$、を$T$に減らす2つの方法が同じ結果を与えなければならないと述べています。2つの単位則 (左と右) は、$\eta$が$T$に適用されてから$\mu$によって減少されるとき、私たちは$T$に戻ると述べています。
 
-Things are a little tricky because we are composing natural
-transformations and functors. So a little refresher on horizontal
-composition is in order. For instance, $T^3$ can be seen as a
-composition of $T$ after $T^2$. We can apply to it the
-horizontal composition of two natural transformations:
+これらの規則は少しトリッキーです、なぜなら自然変換と関手を合成しているからです。そのため、水平合成について少し復習することが必要です。例えば、$T^3$は$T$の後に$T^2$の合成と見なすことができます。私たちはそれに2つの自然変換の水平合成を適用することができます: 
 \[I_T \circ \mu\]
 
 \begin{figure}[H]
@@ -119,16 +64,10 @@ horizontal composition of two natural transformations:
 \end{figure}
 
 \noindent
-and get $T \circ T$; which can be further reduced to $T$ by
-applying $\mu$. $I_T$ is the identity natural transformation
-from $T$ to $T$. You will often see the notation for this
-type of horizontal composition $I_T \circ \mu$ shortened to
-$T \circ \mu$. This notation is unambiguous because it makes no sense to
-compose a functor with a natural transformation, therefore $T$
-must mean $I_T$ in this context.
+そして$T \circ T$を得ることができます；これは$\mu$を適用することでさらに$T$に減少できます。$I_T$は$T$から$T$への恒等自然変換です。この種類の水平合成の表記$I_T \circ \mu$を$T \circ \mu$に短縮するのをよく見るでしょう。この表記は曖昧ではありません、なぜなら関手と自然変換を合成することは意味がないので、$T$はこの文脈で$I_T$を意味しなければなりません。
 
 \noindent
-We can also draw the diagram in the (endo-) functor category ${[}\cat{C}, \cat{C}{]}$:
+また、(自己)関手圏${[}\cat{C}, \cat{C}{]}$における図を描くことができます: 
 
 \begin{figure}[H]
   \centering
@@ -136,10 +75,7 @@ We can also draw the diagram in the (endo-) functor category ${[}\cat{C}, \cat{C
 \end{figure}
 
 \noindent
-Alternatively, we can treat $T^3$ as the composition of
-$T^2 \circ T$ and apply $\mu \circ T$ to it. The result is also
-$T \circ T$ which, again, can be reduced to $T$ using $\mu$. We
-require that the two paths produce the same result.
+代わりに、$T^3$を$T^2 \circ T$の合成として扱い、それに$\mu \circ T$を適用することもできます。結果はまた$T \circ T$で、再び$\mu$を使って$T$に減少することができます。私たちは2つのパスが同じ結果を生むことを要求します。
 
 \begin{figure}[H]
   \centering
@@ -147,12 +83,7 @@ require that the two paths produce the same result.
 \end{figure}
 
 \noindent
-Similarly, we can apply the horizontal composition $\eta \circ T$ to the
-composition of the identity functor $I$ after $T$ to
-obtain $T^2$, which can then be reduced using $\mu$. The
-result should be the same as if we applied the identity natural
-transformation directly to \code{T}. And, by analogy, the same should
-be true for $T \circ \eta$.
+同様に、私たちは恒等関手$I$の後に$T$の合成に水平合成$\eta \circ T$を適用して$T^2$を得ることができ、それから$\mu$を使用して減少することができます。結果は、恒等自然変換を直接\code{T}に適用した場合と同じでなければなりません。同様に、$T \circ \eta$にも真実でなければなりません。
 
 \begin{figure}[H]
   \centering
@@ -160,119 +91,72 @@ be true for $T \circ \eta$.
 \end{figure}
 
 \noindent
-You can convince yourself that these laws guarantee that the composition
-of Kleisli arrows indeed satisfies the laws of a category.
+これらの規則がKleisli射の合成が確かに圏の規則を満たすことを保証することを自分自身に納得させることができます。
 
-The similarities between a monad and a monoid are striking. We have
-multiplication $\mu$, unit $\eta$, associativity, and unit laws. But our
-definition of a monoid is too narrow to describe a monad as a monoid. So
-let's generalize the notion of a monoid.
+モナドとモノイドの類似性は著しいです。私たちは乗算$\mu$、単位$\eta$、結合則、および単位則を持っています。しかし、モナドをモノイドとして記述するためには、私たちのモノイドの定義が狭すぎます。では、モノイドの概念を一般化しましょう。
 
-\section{Monoidal Categories}
+\section{モノイダル圏}
 
-Let's go back to the conventional definition of a monoid. It's a set
-with a binary operation and a special element called unit. In Haskell,
-this can be expressed as a typeclass:
+モノイドの従来の定義に立ち戻りましょう。それは二項演算と単位と呼ばれる特別な要素を持つ集合です。Haskellでは、これは型クラスとして表現されます: 
 
 \src{snippet03}
-The binary operation \code{mappend} must be associative and unital
-(i.e., multiplication by the unit \code{mempty} is a no-op).
+二項演算\code{mappend}は結合的であり、単位的でなければなりません (つまり、単位\code{mempty}による乗算は無操作です) 。
 
-Notice that, in Haskell, the definition of \code{mappend} is curried.
-It can be interpreted as mapping every element of \code{m} to a
-function:
+Haskellでの\code{mappend}の定義はCurry化されています。それはすべての\code{m}の要素を関数にマッピングすると解釈することができます: 
 
 \src{snippet04}
-It's this interpretation that gives rise to the definition of a monoid
-as a single-object category where endomorphisms
-\code{(m -> m)} represent the elements of the monoid.
-But because currying is built into Haskell, we could as well have
-started with a different definition of multiplication:
+この解釈は、モノイドをモノイドの要素として自己準同型\code{(m -> m)}を表す単一対象圏として定義する原因となります。
+しかし、Curry化がHaskellに組み込まれているため、私たちは乗算の異なる定義から始めることもできました: 
 
 \src{snippet05}
-Here, the Cartesian product \code{(m, m)} becomes the source of pairs
-to be multiplied.
+ここで、デカルト積\code{(m, m)}は乗算されるペアのソースになります。
 
-This definition suggests a different path to generalization: replacing
-the Cartesian product with categorical product. We could start with a
-category where products are globally defined, pick an object \code{m}
-there, and define multiplication as a morphism:
+この定義は、圏論的な積でデカルト積を置き換えることによって一般化への別の道を示唆しています。積が大局的に定義された圏を始めることができ、対象\code{m}を選んで、乗算を射として定義することができます: 
 \[\mu \Colon m\times{}m \to m\]
-We have one problem though: In an arbitrary category we can't peek
-inside an object, so how do we pick the unit element? There is a trick
-to it. Remember how element selection is equivalent to a function from
-the singleton set? In Haskell, we could replace the definition of
-\code{mempty} with a function:
+しかし、任意の圏で対象の内部を見ることはできないため、単位要素をどのように選ぶかという問題があります。そのためにはトリックがあります。要素選択が単集合からの関数と同等であることを覚えていますか？Haskellでは、\code{mempty}の定義を関数で置き換えることができます: 
 
 \src{snippet06}
-The singleton is the terminal object in $\Set$, so it's natural to
-generalize this definition to any category that has a terminal object
-$t$:
+単集合は$\Set$における終対象なので、終対象$t$を持つ任意の圏にこの定義を一般化することは自然です: 
 \[\eta \Colon t \to m\]
-This lets us pick the unit ``element'' without having to talk about
-elements.
+これにより、要素について話すことなく、単位「要素」を選ぶことができます。
 
-Unlike in our previous definition of a monoid as a single-object
-category, monoidal laws here are not automatically satisfied --- we have
-to impose them. But in order to formulate them we have to establish the
-monoidal structure of the underlying categorical product itself. Let's
-recall how monoidal structure works in Haskell first.
+以前のモノイドとしての単一対象圏の定義とは異なり、ここではモノイダル則は自動的に満たされません---私たちはそれらを課さなければなりません。しかし、それらを定式化するためには、基礎となる圏論的な積自体のモノイダル構造を確立する必要があります。まずHaskellでのモノイダル構造がどのように機能するかを思い出しましょう。
 
-We start with associativity. In Haskell, the corresponding equational
-law is:
+結合性から始めます。Haskellで、対応する等式は次のようになります: 
 
 \src{snippet07}
-Before we can generalize it to other categories, we have to rewrite it
-as an equality of functions (morphisms). We have to abstract it away
-from its action on individual variables --- in other words, we have to
-use point-free notation. Knowing that the Cartesian product is a
-bifunctor, we can write the left hand side as:
+他の圏に一般化する前に、個々の変数に対するその作用からそれを書き換えて、関数 (射) の等式として書く必要があります。言い換えると、それをポイントフリー表記で使用する必要があります。デカルト積が双関手であることを知っていれば、左辺を次のように書くことができます: 
 
 \src{snippet08}
-and the right hand side as:
+右辺は次のようになります: 
 
 \src{snippet09}
-This is almost what we want. Unfortunately, the Cartesian product is not
-strictly associative --- \code{(x, (y, z))} is not the same as
-\code{((x, y), z)} --- so we can't just write point-free:
+これはほぼ私たちが望むものです。残念ながら、デカルト積は厳密に結合的ではない--- \code{(x, (y, z))}は\code{((x, y), z)}と同じではありません --- したがって、ポイントフリーで書くことはできません: 
 
 \src{snippet10}
-On the other hand, the two nestings of pairs are isomorphic. There is an
-invertible function called the associator that converts between them:
+他方で、ペアの2つの入れ子は同型です。それらの間を変換する可逆関数、結合子 (associator) があります: 
 
 \src{snippet11}
-With the help of the associator, we can write the point-free
-associativity law for \code{mu}:
+結合子の助けを借りて、\code{mu}のポイントフリーな結合則を書くことができます: 
 
 \src{snippet12}
-We can apply a similar trick to unit laws which, in the new notation,
-take the form:
+同様のトリックを単位則に適用することができます。新しい表記では、次の形を取ります: 
 
 \src{snippet13}
-They can be rewritten as:
+それらは次のように書き換えることができます: 
 
 \src{snippet14}
-The isomorphisms \code{lambda} and \code{rho} are called the left
-and right unitor, respectively. They witness the fact that the unit
-\code{()} is the identity of the Cartesian product up to isomorphism:
+同型\code{lambda}と\code{rho}はそれぞれ\code{左単位子}と\code{右単位子}と呼ばれます。これらは、単位\code{()}が同型の違いを除いてデカルト積の恒等写像であるという事実を示しています: 
 
 \src{snippet15}
 
 \src{snippet16}
-The point-free versions of the unit laws are therefore:
+したがって、単位則のポイントフリー版は次のようになります: 
 
 \src{snippet17}
-We have formulated point-free monoidal laws for \code{mu} and
-\code{eta} using the fact that the underlying Cartesian product itself
-acts like a monoidal multiplication in the category of types. Keep in
-mind though that the associativity and unit laws for the Cartesian
-product are valid only up to isomorphism.
+私たちは、基礎となるデカルト積自体が型の圏でモノイダル乗算のように機能するという事実を使用して、\code{mu}と\code{eta}のポイントフリーなモノイダル則を定式化しました。ただし、デカルト積の結合性と単位則は、同型によってのみ有効です。
 
-It turns out that these laws can be generalized to any category with
-products and a terminal object. Categorical products are indeed
-associative up to isomorphism and the terminal object is the unit, also
-up to isomorphism. The associator and the two unitors are natural
-isomorphisms. The laws can be represented by commuting diagrams.
+これらの規則は、積と終対象を持つ任意の圏に一般化することができます。圏論的な積は、実際には同型によって結合的であり、終対象は同型によって単位です。結合子と2つの単位子は自然同型です。規則は可換図式によって表されます。
 
 \begin{figure}[H]
   \centering
@@ -280,65 +164,34 @@ isomorphisms. The laws can be represented by commuting diagrams.
 \end{figure}
 
 \noindent
-Notice that, because the product is a bifunctor, it can lift a pair of
-morphisms --- in Haskell this was done using \code{bimap}.
+積が双関手であるため、対の射を持ち上げることができます --- Haskellではこれは\code{bimap}を使用して行われました。
 
-We could stop here and say that we can define a monoid on top of any
-category with categorical products and a terminal object. As long as we
-can pick an object $m$ and two morphisms $\mu$ and $\eta$ that satisfy
-monoidal laws, we have a monoid. But we can do better than that. We
-don't need a full-blown categorical product to formulate the laws for $\mu$
-and $\eta$. Recall that a product is defined through a universal construction
-that uses projections. We haven't used any projections in our
-formulation of monoidal laws.
+ここで止めて、圏論的な積と終対象を持つ任意の圏の上にモノイドを定義することができると言うことができます。対象$m$と2つの射$\mu$と$\eta$を選び、モノイダル則を満たすことができれば、モノイドを持っています。しかし、私たちはそれよりも良くすることができます。$\mu$と$\eta$の規則を定式化するために完全な圏論的な積を必要とするわけではありません。積が射影を使用する普遍構成を通じて定義されることを思い出してください。私たちのモノイダル則の定式化では、射影を使用していません。
 
-A bifunctor that behaves like a product without being a product is
-called a \newterm{tensor product}, often denoted by the infix operator $\otimes$. A
-definition of a tensor product in general is a bit tricky, but we won't
-worry about it. We'll just list its properties --- the most important
-being associativity up to isomorphism.
+積のように振る舞うが積ではない双関手は、しばしば中置演算子$\otimes$で表される\newterm{テンソル積}と呼ばれます。一般にテンソル積の定義は少し難しいですが、私たちはそれについて心配しません。私たちはそれの特性をリストするだけです --- 最も重要なのは同型による結合性です。
 
-Similarly, we don't need the object $t$ to be terminal. We never
-used its terminal property --- namely, the existence of a unique
-morphism from any object to it. What we require is that it works well in
-concert with the tensor product. Which means that we want it to be the
-unit of the tensor product, again, up to isomorphism. Let's put it all
-together:
+同様に、対象$t$が終対象である必要はありません。その終対象の性質、つまりそれへの任意の対象からの一意な射の存在を使用したことはありません。私たちが必要とするのは、それがテンソル積と連携して機能することです。つまり、同型によってテンソル積の単位であることが望まれます。全体をまとめましょう: 
 
-A monoidal category is a category $\cat{C}$ equipped with a bifunctor
-called the tensor product:
+モノイダル圏は、テンソル積と呼ばれる双関手を備えた圏$\cat{C}$です: 
 \[\otimes \Colon \cat{C}\times{}\cat{C} \to \cat{C}\]
-and a distinct object $i$ called the unit object, together with
-three natural isomorphisms called, respectively, the associator and the
-left and right unitors:
+そして、単位対象$i$と呼ばれる特異な対象、およびそれぞれ結合子と左右の単位子と呼ばれる3つの自然同型があります: 
 \begin{align*}
   \alpha_{a b c} & \Colon (a \otimes b) \otimes c \to a \otimes (b \otimes c) \\
   \lambda_a      & \Colon i \otimes a \to a                                   \\
   \rho_a         & \Colon a \otimes i \to a
 \end{align*}
-(There is also a coherence condition for simplifying a quadruple tensor
-product.)
+ (四重テンソル積を単純化するための整合性条件もあります。) 
 
-What's important is that a tensor product describes many familiar
-bifunctors. In particular, it works for a product, a coproduct and, as
-we'll see shortly, for the composition of endofunctors (and also for
-some more esoteric products like Day convolution). Monoidal categories
-will play an essential role in the formulation of enriched categories.
+重要なのは、テンソル積が多くのおなじみの双関手を記述することです。特に、積、余積、およびまもなく見るように、自己関手の合成 (およびDay畳み込みのようないくつかのより奇妙な積) に対して機能します。モノイダル圏は、豊穣圏の定式化において重要な役割を果たします。
 
-\section{Monoid in a Monoidal Category}
+\section{モノイダル圏におけるモノイド}
 
-We are now ready to define a monoid in a more general setting of a
-monoidal category. We start by picking an object $m$. Using the
-tensor product we can form powers of $m$. The square of
-$m$ is $m \otimes m$. There are two ways of forming the cube
-of $m$, but they are isomorphic through the associator. Similarly
-for higher powers of $m$ (that's where we need the coherence
-conditions). To form a monoid we need to pick two morphisms:
+私たちは今、モノイダル圏のより一般的な設定でモノイドを定義する準備ができました。対象$m$を選びます。テンソル積を使用して$m$の累乗を形成できます。$m$の二乗は$m \otimes m$です。$m$の立方体を形成する2つの方法がありますが、結合子を介して同型です。同様に、$m$のより高い累乗のために (整合性条件が必要です) 。モノイドを形成するために、2つの射を選びます: 
 \begin{align*}
   \mu  & \Colon m \otimes m \to m \\
   \eta & \Colon i \to m
 \end{align*}
-where $i$ is the unit object for our tensor product.
+ここで$i$は私たちのテンソル積のための単位対象です。
 
 \begin{figure}[H]
   \centering
@@ -346,8 +199,7 @@ where $i$ is the unit object for our tensor product.
 \end{figure}
 
 \noindent
-These morphisms have to satisfy associativity and unit laws, which can
-be expressed in terms of the following commuting diagrams:
+これらの射は結合則と単位則を満たさなければなりませんが、それらは次の可換図式の形で表現できます: 
 
 \begin{figure}[H]
   \centering
@@ -360,39 +212,17 @@ be expressed in terms of the following commuting diagrams:
 \end{figure}
 
 \noindent
-Notice that it's essential that the tensor product be a bifunctor
-because we need to lift pairs of morphisms to form products such as
-$\mu \otimes \id$ or $\eta \otimes \id$. These diagrams are just a
-straightforward generalization of our previous results for categorical
-products.
+テンソル積が双関手であることが重要です。なぜなら、私たちは射のペアを持ち上げて$\mu \otimes \id$や$\eta \otimes \id$のような積を形成する必要があるからです。これらの図式は、圏論的な積に対する私たちの以前の結果の直接的な一般化です。
 
-\section{Monads as Monoids}
+\section{モナドとしてのモノイド}
 
-Monoidal structures pop up in unexpected places. One such place is the
-functor category. If you squint a little, you might be able to see
-functor composition as a form of multiplication. The problem is that not
-any two functors can be composed --- the target category of one has to
-be the source category of the other. That's just the usual rule of
-composition of morphisms --- and, as we know, functors are indeed
-morphisms in the category $\Cat$. But just like endomorphisms
-(morphisms that loop back to the same object) are always composable, so
-are endofunctors. For any given category $\cat{C}$, endofunctors from
-$\cat{C}$ to $\cat{C}$ form the functor category ${[}\cat{C}, \cat{C}{]}$. Its
-objects are endofunctors, and morphisms are natural transformations
-between them. We can take any two objects from this category, say
-endofunctors $F$ and $G$, and produce a third object $F \circ G$ ---
-an endofunctor that's their composition.
+モノイダル構造は予期せぬ場所で現れます。その一つが関手圏です。少し目を細めれば、関手の合成が乗法の一種として見えるかもしれません。問題は、任意の2つの関手が合成可能であるわけではないことです --- 一つの関手の目的圏がもう一つの関手の出発圏でなければなりません。これは射の合成に関する通常の規則です --- そして、私たちは関手が実際には圏$\Cat$の射であることを知っています。しかし、自己準同型 (同じ対象に戻る射) は常に合成可能であるように、自己関手もそうです。任意の与えられた圏$\cat{C}$の自己関手は、関手圏${[}\cat{C}, \cat{C}{]}$を形成します。その対象は自己関手であり、射はそれらの間の自然変換です。この圏から任意の2つの対象、例えば自己関手$F$と$G$を取り、それらの合成である第三の対象$F \circ G$ --- それらの合成である自己関手を生成できます。
 
-Is endofunctor composition a good candidate for a tensor product? First,
-we have to establish that it's a bifunctor. Can it be used to lift a
-pair of morphisms --- here, natural transformations? The signature of
-the analog of \code{bimap} for the tensor product would look something
-like this:
+自己関手の合成はテンソル積の良い候補ですか？まず、それが双関手であることを確立する必要があります。ここでの射のペア --- つまり、自然変換 --- を持ち上げることができますか？テンソル積の\code{bimap}の類似物の署名は次のようになります: 
 \[\mathit{bimap} \Colon (a \to b) \to (c \to d) \to (a \otimes c \to b \otimes d)\]
-If you replace objects by endofunctors, arrows by natural
-transformations, and tensor products by composition, you get:
+対象を自己関手に、矢を自然変換に、そしてテンソル積を合成に置き換えると、次のようになります: 
 \[(F \to F') \to (G \to G') \to (F \circ G \to F' \circ G')\]
-which you may recognize as the special case of horizontal composition.
+これは水平合成の特別なケースとして認識できます。
 
 \begin{figure}[H]
   \centering
@@ -400,21 +230,14 @@ which you may recognize as the special case of horizontal composition.
 \end{figure}
 
 \noindent
-We also have at our disposal the identity endofunctor $I$, which
-can serve as the identity for endofunctor composition --- our new tensor
-product. Moreover, functor composition is associative. In fact
-associativity and unit laws are strict --- there's no need for the
-associator or the two unitors. So endofunctors form a strict monoidal
-category with functor composition as tensor product.
+また、私たちの新しいテンソル積のための恒等写像として機能できる、恒等自己関手$I$も利用可能です。さらに、関手の合成は結合的です。実際、結合則と単位則は厳格です --- 結合子や2つの単位子は必要ありません。したがって、自己関手は、関手の合成をテンソル積として、厳密なモノイダル圏を形成します。
 
-What's a monoid in this category? It's an object --- that is an
-endofunctor $T$; and two morphisms --- that is natural
-transformations:
+この圏でのモノイドとは何ですか？それは対象 --- つまり自己関手$T$；そして2つの射 --- つまり自然変換です: 
 \begin{gather*}
   \mu \Colon T \circ T \to T \\
   \eta \Colon I \to T
 \end{gather*}
-Not only that, here are the monoid laws:
+それだけでなく、ここにモノイド則があります: 
 
 \begin{figure}[H]
   \centering
@@ -427,105 +250,65 @@ Not only that, here are the monoid laws:
 \end{figure}
 
 \noindent
-They are exactly the monad laws we've seen before. Now you understand
-the famous quote from Saunders Mac Lane:
+それらは、以前見たモナド則とまさに同じです。これで、Saunders Mac Laneの有名な引用を理解できます: 
 
 \begin{quote}
-  All told, monad is just a monoid in the category of endofunctors.
+  総じて、モナドは単に自己関手の圏のモノイドです。
 \end{quote}
-You might have seen it emblazoned on some t-shirts at functional
-programming conferences.
+あなたはそれを機能的プログラミング会議でいくつかのTシャツに掲げられているかもしれません。
 
-\section{Monads from Adjunctions}
+\section{随伴からのモナド}
 
-An \hyperref[adjunctions]{adjunction}\footnote{See ch.18 on \hyperref[adjunctions]{adjunctions}.}
-$L \dashv R$, is a pair of functors going back and forth between two
-categories $\cat{C}$ and $\cat{D}$. There are two ways of composing them
-giving rise to two endofunctors, $R \circ L$ and $L \circ R$.
-As per an adjunction, these endofunctors are related to identity
-functors through two natural transformations called unit and counit:
+随伴$L \dashv R$は、2つの圏$\cat{C}$と$\cat{D}$の間を行き来する一対の関手です。それらを合成する2つの方法があり、2つの自己関手$R \circ L$と$L \circ R$が生まれます。随伴によれば、これらの自己関手は単位と余単位と呼ばれる2つの自然変換を介して恒等関手に関連しています: 
 \begin{gather*}
   \eta \Colon I_{\cat{D}} \to R \circ L \\
   \varepsilon \Colon L \circ R \to I_{\cat{C}}
 \end{gather*}
-Immediately we see that the unit of an adjunction looks just like the
-unit of a monad. It turns out that the endofunctor $R \circ L$ is
-indeed a monad. All we need is to define the appropriate $\mu$ to go with
-the $\eta$. That's a natural transformation between the square of our
-endofunctor and the endofunctor itself or, in terms of the adjoint
-functors:
+直ちに、随伴の単位はモナドの単位とまったく同じように見えることがわかります。実際、自己関手$R \circ L$はモナドです。適切な$\mu$を$\eta$とともに定義するだけでよいのです。それは、私たちの自己関手の二乗と自己関手自体の間の自然変換です、または随伴関手の観点からは: 
 \[R \circ L \circ R \circ L \to R \circ L\]
-And, indeed, we can use the counit to collapse the $L \circ R$ in
-the middle. The exact formula for $\mu$ is given by the horizontal
-composition:
+実際、私たちは中間の$L \circ R$を崩壊させるために余単位を使用することができます。$\mu$の正確な式は、水平合成によって与えられます: 
 \[\mu = R \circ \varepsilon \circ L\]
-Monadic laws follow from the identities satisfied by the unit and counit
-of the adjunction and the interchange law.
+モナド則は、随伴の単位と余単位によって満たされる恒等式と交換則から導かれます。
 
-We don't see a lot of monads derived from adjunctions in Haskell,
-because an adjunction usually involves two categories. However, the
-definitions of an exponential, or a function object, is an exception.
-Here are the two endofunctors that form this adjunction:
+Haskellでは、随伴が2つの圏に関与するため、随伴から派生したモナドをあまり見ません。ただし、指数関数、または関数対象の定義は例外です。この随伴を形成する2つの自己関手は次のようになります: 
 \begin{gather*}
   L z = z\times{}s \\
   R b = s \Rightarrow b
 \end{gather*}
-You may recognize their composition as the familiar state monad:
+その合成を、おなじみのStateモナドとして認識するかもしれません: 
 \[R (L z) = s \Rightarrow (z\times{}s)\]
-We've seen this monad before in Haskell:
+これは、以前にHaskellで見たモナドです: 
 
 \src{snippet18}
-Let's also translate the adjunction to Haskell. The left functor is the
-product functor:
+随伴をHaskellに翻訳しましょう。左関手はProduct関手です: 
 
 \src{snippet19}
-and the right functor is the reader functor:
+そして、右関手はReader関手です: 
 
 \src{snippet20}
-They form the adjunction:
+それらは随伴を形成します: 
 
 \src{snippet21}
-You can easily convince yourself that the composition of the reader
-functor after the product functor is indeed equivalent to the state
-functor:
+Product関手の後のReader関手の合成が確かにState関手に等しいことを簡単に納得することができます: 
 
 \src{snippet22}
-As expected, the \code{unit} of the adjunction is equivalent to the
-\code{return} function of the state monad. The \code{counit} acts by
-evaluating a function acting on its argument. This is recognizable as
-the uncurried version of the function \code{runState}:
+予想通り、随伴の\code{unit}はStateモナドの\code{return}関数に相当します。余単位は、その引数に作用する関数を評価することで作用します。これは\code{runState}の未Curry化バージョンとして認識できます: 
 
 \src{snippet23}
-(uncurried, because in \code{counit} it acts on a pair).
+(未Curry化、なぜなら\code{counit}はペアに作用するからです)。
 
-We can now define \code{join} for the state monad as a component of
-the natural transformation $\mu$. For that we need a horizontal composition
-of three natural transformations:
+私たちは、3つの自然変換の水平合成を必要とする自然変換$\mu$の一部としてStateモナドの\code{join}を定義することができます: 
 \[\mu = R \circ \varepsilon \circ L\]
-In other words, we need to sneak the counit $\varepsilon$ across one level of the
-reader functor. We can't just call \code{fmap} directly, because the
-compiler would pick the one for the \code{State} functor, rather than
-the \code{Reader} functor. But recall that \code{fmap} for the
-reader functor is just left function composition. So we'll use function
-composition directly.
+つまり、余単位$\varepsilon$をReader関手の1レベルを超えて潜り込ませる必要があります。コンパイラは\code{Reader}関手ではなく\code{State}関手のための\code{fmap}を選択するため、直接\code{fmap}を呼び出すことはできません。しかし、Reader関手の\code{fmap}は左関数合成に過ぎないことを思い出してください。だから、関数合成を直接使用します。
 
-We have to first peel off the data constructor \code{State} to expose
-the function inside the \code{State} functor. This is done using
-\code{runState}:
+まず、\code{State}データコンストラクタを剥がして、\code{State}関手内の関数を露出させる必要があります。これは\code{runState}を使用して行われます: 
 
 \src{snippet24}
-Then we left-compose it with the counit, which is defined by
-\code{uncurry runState}. Finally, we clothe it back in the
-\code{State} data constructor:
+次に、それを余単位である\code{uncurry runState}で左合成します。最後に、それを\code{State}データコンストラクタで再び覆います: 
 
 \src{snippet25}
-This is indeed the implementation of \code{join} for the
-\code{State} monad.
+これは実際には、\code{State}モナドの\code{join}の実装です。
 
-It turns out that not only every adjunction gives rise to a monad, but
-the converse is also true: every monad can be factorized into a
-composition of two adjoint functors. Such a factorization is not unique
-though.
+実際には、すべての随伴がモナドを生み出すだけでなく、逆もまた真であることがわかります: すべてのモナドは2つの随伴関手の合成に分解することができます。ただし、そのような分解は一意ではありません。
 
-We'll talk about the other endofunctor $L \circ R$ in the next
-section.
+次のセクションで他の自己関手$L \circ R$について話します。
